刑事訴訟法 1995.10.5

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -528,7 +528,9 @@
 
 * 252 案件有左列情形之一者，應為不起訴之處分：一、曾經判決確定者。二、時效已完成者。三、曾經大赦者。四、犯罪後之法律已廢止其刑罰者。五、告訴或請求乃論之罪，其告訴或請求已經撤回或已逾告訴期間者。六、被告死亡者。七、法院對於被告無審判權者。八、行為不罰者。九、法律應免除其刑者。十、犯罪嫌疑不足者。
 
-* 253 檢察官於刑法第六十一條所列各罪之案件，參酌刑法第五十七條所列事項，認為以不起訴為適當者，得為不起訴之處分。檢察官為前項不起訴處分前，並得斟酌情形，經告訴人同意，命被告為左列各款事項：一、向被害人道歉。二、立悔過書。三、向被害人支付相當數額之慰撫金。前項情形，應附記於不起訴處分書內。第二項第三款並得為民事強制執行名義。
+* 253 第三百七十六條所規定之案件，檢察官參酌刑法第五十七條所列事項，認為以不起訴為適當者，得為不起訴之處分。檢察官為前項不起訴處分前，並得斟酌情形，經告訴人同意，命被告為左列各款事項：一、向被害人道歉。二、立悔過書。三、向被害人支付相當數額之慰撫金。前項情形，應附記於不起訴處分書內。第二項第三款並得為民事強制執行名義。
+
+> 釋：一、第三百七十六條第一項所規定之案件係不得上訴於第三審法院之案件，檢察官依職權得為不起訴處分案件之範圍，與不得上訴於第三審法院之案件範圍相符。茲限制上訴第三審案件範圍已修正擴大，為加強微罪不舉之功能，則檢察官之職權不起訴範圍，自宜比照適度擴大，爰修正第一項。二、第二、三、四項規定未修正。
 
 * 254 被告犯數罪時，其一罪已受重刑之確定判決，檢察官認為他罪雖行起訴，於應執行之刑無重大關係者，得為不起訴之處分。
 
@@ -776,13 +778,17 @@
 
 * 372 第三百六十七條之判決及對於原審諭知管轄錯誤、免訴或不受理之判決上訴時，第二審法院認其為無理由而駁回上訴，或認為有理由而發回該案件之判決，得不經言詞辯論為之。
 
-* 373 第二審判決書，得引用第一審判決書所記載之事實及證據。
+* 373 第二審判決書，得引用第一審判決書所記載之事實、證據及理由，對案情重要事項第一審未予論述，或於第二審提出有利於被告之證據或辯解不予採納者，應補充記載其理由。
+
+> 釋：為簡化第二審判決書之制作，爰修正為第二審認定之理由與第一審相同者，亦得引用之，惟如對案情重要事項第一審未予論述，或於第二審提出有利於被告之證據或辯解不予採納者，應補充記載其理由，以符合我國刑事訴訟第二審係覆審制之法意，然如被告之上訴僅求其宣告緩刑時，則第二審法院可依本條原規定引用原審判決書所載之事實、證據外，並依新增之規定引用第一審判決之理由，單僅就准否緩刑之理由，為補充之記載，以減輕第二審法官工作負擔。
 
 * 374 第二審判決，被告或自訴人得為上訴者，應併將提出上訴理由書之期間，記載於送達之判決正本。
 
 * 375 不服高等法院之第二審或第一審判決而上訴者，應向最高法院為之。最高法院審判不服高等法院第一審判決之上訴，亦適用第三審程序。
 
-* 376 刑法第六十一條所列各罪之案件經第二審判決者，不得上訴於第三審法院。
+* 376 左列各罪之案件，經第二審判決者，不得上訴於第三審法院：一、最重本刑為三年以下有期徒刑、拘役或專科罰金之罪。二、刑法第三百二十條、第三百二十一條之竊盜罪。三、刑法第三百三十五條、第三百三十六條第二項之侵占罪。四、刑法第三百三十九條、第三百四十一條之詐欺罪。五、刑法第三百四十二條之背信罪。六、刑法第三百四十六條之恐嚇罪。七、刑法第三百四十九條第二項之贓物罪。
+
+> 釋：上訴第三審之刑事案件日增，法官不勝負荷，參照外國對上訴第三審之案件均嚴加限制之立法例，關於第三百二十一條加重竊盜罪、第三百三十六條第二項業務侵占罪、第三百四十一條之準詐欺罪、第三百四十二條背信罪及第三百四十六條恐嚇取財罪等案件，修正為不得上訴於第三審法院。
 
 * 377 上訴於第三審法院，非以判決違背法令為理由，不得為之。
 
@@ -928,13 +934,19 @@
 
 * 448 非常上訴之判決，除依前條第一項第一款但書及第二項規定者外，其效力不及於被告。
 
-* 449 刑法第六十一條所列各罪之案件，第一審法院依被告在偵查中之自白或其他現存之證據，已足認定其犯罪者，得因檢察官之聲請，不經通常審判程序，逕以簡易判決處刑。但有必要時，應於處刑前訊問被告。依前項判決所科之刑，以拘役或罰金為限。
+* 449 第三百七十六條所規定之案件，第一審法院依被告在偵查中之自白或其他現存之證據，已足認定其犯罪者，得因檢察官之聲請，不經通常審判程序，逕以簡易判決處刑。但有必要時，應於處刑前訊問被告。前項案件檢察官依通常程序起訴，經法院訊問被告，認為宜以簡易判決處刑者，得不經通常審判程序，逕以簡易判決處刑。依前二項判決所科之刑以六月以下有期徒刑、拘役或罰金為限。
+
+> 釋：一、配合刑事訴訟法第三百七十六條修正不得上訴第三審案件範圍，規定為得行簡易訴訟之案件範圍，爰修正第一項。二、依現行規定，檢察官若不聲請簡易處刑時，法院即受其限制，不得逕以簡易判決處刑，只得依通常程序審理，致「簡易程序」之功能不彰，故增訂第二項並修正第三項，擴大得行簡易程序之範圍。
+
+* 449.1 簡易程序案件，得由簡易庭辦理之。
+
+> 釋：一、本條係新增條文。二、依法院組織法第十條：「地方法院得設簡易庭，其管轄事件依法律之規定。」簡易庭辦理刑事簡易程序案件，應於刑事訴訟法內加以規定，以為依據。
 
 * 450 以簡易判決處刑時，得併科沒收或為其他必要之處分。第二百九十九條第一項但書之規定，於前項判決準用之。
 
-* 451 檢察官偵查刑法第六十一條所列各罪之案件時，審酌情節認為宜以簡易判決處刑者，應即以書面為聲請。第二百六十四條之規定，於前項聲請準用之。第一項聲請，與起訴有同一之效力。被告於偵查中自白者，得請求檢察官為第一項之聲請。檢察官依通常程序起訴之案件，經法院訊問被告，認為宜以簡易判決處刑者，於徵得檢察官及被告同意後，得以簡易判決處刑。前項檢察官之同意，視為第一項之聲請。
+* 451 檢察官偵查第三百七十六條所規定之案件時，審酌情節認為宜以簡易判決處刑者，應即以書面為聲請。第二百六十四條之規定，於前項聲請準用之。第一項聲請，與起訴有同一之效力。被告於偵查中自白者，得請求檢察官為第一項之聲請。
 
-> 釋：為擴大簡易程序之適用，一方面賦予被告聲請檢察官為簡易判決處刑之聲請權，惟以被告於偵查中自白者為限，將之增列為第四項。另一方面檢察官依通常公訴程序起訴後，法院審酌情節認為宜以簡易判決處刑者亦賦法院得行簡易程序，惟此時應得檢察官及被告之同意，以維護當事人之權益；並視為檢察官已為簡易判決處刑之聲請。爰將此列為第五項、第六項。
+> 釋：一、配合刑事訴訟法第三百七十六條第一項修正不得上訴第三審案件之範圍，修正第一項。二、因應增訂及修正第四百四十九條第二、三項擴大得行簡易程序之範圍，刪除本條第五、六項。三、第二、三、四項規定未修正。
 
 * 451.1 前條第一項之案件，被告於偵查中自白者，得向檢察官表示願受科刑之範圍，檢察官得以被告之表示為基礎，向法院為具體之求刑。被告自白犯罪未為前項之表示者，在審判中得向法院為之，檢察官亦得向法院為具體之求刑。
 
@@ -944,9 +956,9 @@
 
 * 453 以簡易判決處刑案件，法院應立即處分。
 
-* 454 簡易判決，應記載左列事項：一、第五十一條第一項之記載。二、犯罪之事實及證據。三、應適用之法條。四、第三百零九條各款所列事項。五、自簡易判決送達之日起十日內，得提起上訴之曉示。但不得上訴者，不在此限。前項判決書，得以簡略方式為之，第二款之犯罪事實得引用檢察官聲請簡易判決處刑書或起訴書之記載，證據得僅列舉證據之標目。
+* 454 簡易判決，應記載左列事項：一、第五十一條第一項之記載。二、犯罪之事實及證據。三、應適用之法條。四、第三百零九條各款所列事項。五、自簡易判決送達之日起十日內，得提起上訴之曉示。但不得上訴者，不在此限。前項判決書，得以簡略方式為之，如認定之犯罪事實、證據及應適用之法條，與檢察官聲請簡易判決處刑書或起訴書之記載相同者，得引用之。
 
-> 釋：一、簡易程序原在求其便捷，除不經通常審判程序外，判決書之製作，亦應力求簡化，始能發揮其簡易功能。本條原條文規定與一般正式判決大同小異，未能減少推事之負荷，成效自屬不彰。且第四百四十九條第二項規定，既已明定簡易判決所科之刑，以拘役或罰金為限，罪證明確，似無再於判決中記載「認定之理由」之必要，爰將第二款之「與其認定之理由」七字刪除。二、法院依被告所表示願受科刑之範圍或檢察官具體之求刑範圍判決者，依第四百五十五條之一規定不得上訴，爰於第一項第五款增列「但不得上訴者不在此限。」三、為進一步簡化簡易判決之記載，爰仿照日本刑事訴訟規則第二百十八條及第二百十八條之二之例，犯罪事實得引用檢察官聲請簡易判決處刑書或起訴書之記載，證據則得列舉證據標目，並均得以簡略方式為之。
+> 釋：一、簡易判決書應記載其認定之犯罪事實、證據及應適用之法條，如所認定者與檢察官聲請簡易判決處刑書或起訴書記載相同者，實無必要再重複記載，為徹底簡化簡易判決書之製作，使一審法官之工作負擔能真正減輕，爰修正本條第二項規定得逕行引用之。二、第一項規定未修正。
 
 * 455 書記官接受簡易判決原本後，應立即制作正本送達於當事人。
 
