民事訴訟法 1996.9.6

--- a/司法-民事/民事訴訟法.md
+++ b/司法-民事/民事訴訟法.md
@@ -736,7 +736,9 @@
 
 * 362 當事人因妨礙他造使用，故意將文書隱匿、毀壞或致不堪使用者，法院得認他造關於該文書之主張為正當。
 
-* 363 本目規定，於文書外之物件有與文書相同之效用者準用之。
+* 363 本目規定，於文書外之物件有與文書相同之效用者準用之。文書或前項物件，須以科技設備始能呈現其內容或提出原件有事實上之困難者，得僅提出呈現其內容之書面並證明其內容與原件相符。
+
+> 釋：一、原條文不修正，列為第一項。二、隨科技之進步，利用磁碟片、磁帶、錄音帶、錄影帶、縮影膠片等科技設備作成文書或保存文書、資訊等之運用，日漸廣泛；於訴訟中，舉證人以前開科技設備所保存之內容作為證據資料，聲請調查時，如未顧及該等證據方法之特異性，一律依原條文準用本目之規定，令持有人必須提出原件時，恐有窒礙難行之處；爰增設第二項，規定證據方法須以科技設備始能呈現其內容或提出原件有事實上之困難者，提出人得僅提出呈現其內容之書面並證明其內容與原件相符，以代原件之提出。
 
 * 364 聲請勘驗，應表明勘驗之標的物及應勘驗之事項。
 
