--- a/司法-民事/強制執行法.md
+++ b/司法-民事/強制執行法.md
@@ -1,356 +1,368 @@
-* 1 民事強制執行事務，於地方法院設民事執行處辦理之。
+* 1 民事強制執行事務，於地方法院及其分院設民事執行處辦理之。
 
-* 2 民事執行處，置專任之推事及書記官，辦理執行事務。但在事務較簡之法院，得由推事及書記官兼辦之。
+* 2 民事執行處置法官、書記官及執達員，辦理執行事務。
 
-* 3 強制執行事件，由推事、書記官督同執達員辦理之。
+* 3 強制執行事件，由法官命書記官督同執達員辦理之。
 
-* 4 強制執行，依左列執行名義為之：一、確定之終局判決。二、假扣押、假處分、假執行之裁判，及其他依民事訴訟法得為強制執行之裁判。三、依民事訴訟法成立之和解或調解。四、依公證法規定得為強制執行之公證書。五、抵押權人或質權人，為拍賣抵押物或質物之聲請，經法院為許可強制執行之裁定者。六、其他依法律之規定，得為強制執行名義者。執行名義附有條件、期限或須債權人提供擔保者，於條件成就、期限屆至或供擔保後，始得開始強制執行。依第一項第一款或第三款之執行名義聲請強制執行者，自執行名義成立之日起，其原有請求權之消滅時效期間不滿五年者，延長為五年；如因時效中斷而重行起算者亦同。
+* 3.1 執行人員於執行職務時，遇有抗拒者，得用強制力實施之。但不得逾必要之程度。實施強制執行時，為防止抗拒或遇有其他必要之情形者，得請警察或有關機關協助。前項情形，警察或有關機關有協助之義務。
 
-> 釋：一、公證書得強制執行之條件，公證法第十一條已有明文規定，爰將本條第一項第四款修正。現行法第一項第五款項規定抵押權人依民法第八百七十三條為拍賣抵押物之聲請，但未能適用於同法第八百九十三條關於質權人於債權已屆清償期，而未受清償者，得拍賣質物。故增訂質權人亦可為拍賣質物之聲請，以期周全。二、執行名義附有解除條件或終期者，於條件成就或期限屆滿時，失其效力。其附有停止條件或始期者，依民法第九十九條第一項、第一百零二條第一項之規定，於條件成就或期限屆至前，不發生效力，自均無從開始強制執行。應由債權人提供擔保而尚未提供者亦同。爰增訂第二項明定之。三、請求權之消滅時效中斷後，重行起算時，其時效期間，仍應依權利之性質定其長短，不因判決確定或其他事由中斷而變更（參照最高法院四十九年臺上字第一九五六號判例及司法院三十一年院字第二四一五號解釋）。惟法律所定短期消滅時效，其主要目的在避免舉證困難。如經法院判決確定或和解、調解成立者，其實體上權利義務關係，業已確定，已不生舉證問題。為保護債權人之合法權益，自無再適用原短期消滅時效規定之必要。爰規定此種執行名義，其請求權消滅時效期間不滿五年者，延長為五年，以免此種債權人，須不斷請求強制執行之煩，特增訂第三項。至其他執行名義，其實體上權利義務關係，尚待確定。自不宜包括在內。
+* 4 強制執行，依左列執行名義為之：一、確定之終局判決。二、假扣押、假處分、假執行之裁判及其他依民事訴訟法得為強制執行之裁判。三、依民事訴訟法成立之和解或調解。四、依公證法規定得為強制執行之公證書。五、抵押權人或質權人，為拍賣抵押物或質物之聲請，經法院為許可強制執行之裁定者。六、其他依法律之規定，得為強制執行名義者。執行名義附有條件、期限或須債權人提供擔保者，於條件成就、期限屆至或供擔保後，始得開始強制執行。執行名義有對待給付者，以債權人已為給付或已提出給付後，始得開始強制執行。
 
-* 5 強制執行，依債權人之聲請為之。但假扣押、假處分及假執行之裁判，其執行得依職權為之。強制執行開始後，債務人死亡者，應對其遺產續行強制執行。
+* 4.1 依外國法院確定判決聲請強制執行者，以該判決無民事訴訟法第四百零二條各款情形之一，並經中華民國法院以判決宣示許可其執行者為限，得為強制執行。前項請求許可執行之訴，由債務人住所地之法院管轄。債務人於中華民國無住所者，由執行標的物所在地或應為執行行為地之法院管轄。
 
-> 釋：一、強制執行固可因債權人之聲請為之。但刑事訴訟法第四百七十條及第四百七十一條所定之檢察官囑託執行及其他依法得聲請強制執行之機關，在廣義解釋，均為本法第五條之債權人，應納入本法，以資周全，故增訂之。二、強制執行程序，兩造實體上之權義關係，已經確定，與民事訴訟程序之性質不同。其程序開始後，雖債務人死亡，亦無當然停止之必要（民事訴訟法第一百六十八條參照）。爰增訂本條第二項，以資依循。
+* 4.2 執行名義為確定終局判決者，除當事人外，對於左列之人亦有效力：一、訴訟繫屬後為當事人之繼受人及為當事人或其繼受人占有請求之標的物者。二、為他人而為原告或被告者之該他人及訴訟繫屬後為該他人之繼受人，及為該他人或其繼受人占有請求之標的物者。前項規定，於第四條第一項第二款至第六款規定之執行名義，準用之。
 
-* 6 債權人聲請強制執行，應依左列規定，提出證明文件：一、依第四條第一項第一款聲請者，應提出判決正本並判決確定證明書或各審級之判決正本。二、依第四條第一項第二款聲請者，應提出裁判正本。三、依第四條第一項第三款聲請者，應提出筆錄正本。四、依第四條第一項第四款聲請者，應提出公證書。五、依第四條第一項第五款聲請者，應提出債權或抵押權或質權之證明文件及裁定正本。六、依第四條第一項第六款聲請者，應提出得為強制執行名義之證明文件。前項證明文件，未經提出者，執行處應調閱卷宗。但受聲請之法院非係原第一審法院時，不在此限。
+* 5 債權人聲請強制執行，應以書狀表明左列各款事項，提出於執行法院為之：一、當事人及法定代理人。二、請求實現之權利。書狀內宜記載執行之標的物、應為之執行行為或本法所定其他事項。強制執行開始後，債務人死亡者，得續行強制執行。債務人死亡，有左列情形之一者，執行法院得依債權人或利害關係人聲請，選任特別代理人，但有遺囑執行人或遺產管理人者，不在此限：一、繼承人有無不明者。二、繼承人所在不明者。三、繼承人是否承認繼承不明者。四、繼承人因故不能管理遺產者。
 
-> 釋：一、第一項第一至第六款每款「第四條」下均加「第一項」三字，因第四條增加二項之故。另第五款增「或質權」。二、增定第二項。原第二項移列為第三項並做文字修正。
+* 5.1 債權人聲請強制執行之執行名義係命債務人分期給付者，於各期履行期屆至時，執行法院得經債權人之聲請，繼續執行之。
 
-* 7 強制執行，向應執行之標的物所在地或應為執行行為地之法院為之；其不在同一法院者，得向其中一法院為之。對於船舶聲請強制執行者，向船舶停泊港之法院為之。受理強制執行事件之法院，須在他法院管轄區內為執行行為時，應囑託該他法院為之。
+* 5.2 有執行名義之債權人依民法第一百五十一條規定，自行拘束債務人之自由或押收其財產，而聲請法院處理者，依本法規定有關執行程序辦理之。前項情形，如債權人尚未聲請強制執行者，視為強制執行之聲請。
 
-> 釋：一、本法既將前條但書依職權執行之規定刪除，自無再將裁判正本移付執行處之必要，原文宜予刪除。二、有關執行事件之受理法院，現行法未設規定，爰增訂第一項至第三項，以應實際需要。
+* 6 債權人聲請強制執行，應依左列規定，提出證明文件：一、依第四條第一項第一款聲請者，應提出判決正本並判決確定證明書或各審級之判決正本。二、依第四條第一項第二款聲請者，應提出裁判正本。三、依第四條第一項第三款聲請者，應提出筆錄正本。四、依第四條第一項第四款聲請者，應提出公證書。五、依第四條第一項第五款聲請者，應提出債權及抵押權或質權之證明文件及裁定正本。六、依第四條第一項第六款聲請者，應提出得為強制執行名義之證明文件。前項證明文件，未經提出者，執行法院應調閱卷宗。但受聲請之法院非係原第一審法院時，不在此限。
 
-* 8 關於強制執行事項及範圍發生疑義時，執行處應調閱卷宗。前項卷宗，如為他法院所需用時，應自作繕本或節本，或囑託他法院移送繕本或節本。
+* 7 強制執行由應執行之標的物所在地或應為執行行為地之法院管轄。應執行之標的物所在地或應為執行行為地不明者，由債務人之住、居所、公務所、事務所、營業所所在地之法院管轄。同一強制執行，數法院有管轄權者，債權人得向其中一法院聲請。受理強制執行事件之法院，須在他法院管轄區內為執行行為時，應囑託該他法院為之。
+
+* 8 關於強制執行事項及範圍發生疑義時，執行法院應調閱卷宗。前項卷宗，如為他法院所需用時，應自作繕本或節本，或囑託他法院移送繕本或節本。
 
 * 9 開始強制執行前，除因調查關於強制執行之法定要件或執行之標的物認為必要者外，無庸傳訊當事人。
 
-* 10 實施強制執行時，債務人如具確實擔保，經債權人同意者，得延緩執行。
+* 10 實施強制執行時，經債權人同意者，執行法院得延緩執行。前項延緩執行之期限不得逾三個月。債權人聲請續行執行而再同意延緩執行者，以二次為限。每次延緩期間屆滿後，債權人經執行法院通知而不於十日內聲請續行執行者，視為撤回其強制執行之聲請。實施強制執行時，如有特別情事繼續執行顯非適當者，執行法院得變更或延展執行期日。
 
-* 11 供強制執行之財產權，其取得、設定、喪失或變更，依法應登記者，為強制執行時，執行法院應即通知該管登記機關登記其事由。前項通知，執行法院得依債權人之聲請，交債權人逕行持送登記機關登記。債務人因繼承、強制執行、徵收或法院之判決，於登記前已取得不動產物權者，執行法院得因債權人之聲請，以債務人費用，通知登記機關登記為債務人所有後而為執行。前項規定，於第五條第二項之遺產續行強制執行準用之。但不影響繼承人拋棄繼承或限定繼承之權利。
+* 11 供強制執行之財產權，其取得、設定、喪失或變更，依法應登記者，為強制執行時，執行法院應即通知該管登記機關登記其事由。前項通知，執行法院得依債權人之聲請，交債權人逕行持送登記機關登記。債務人因繼承、強制執行、徵收或法院之判決，於登記前已取得不動產物權者，執行法院得因債權人之聲請，以債務人費用，通知登記機關登記為債務人所有後而為執行。前項規定，於第五條第三項之續行強制執行而有辦理繼承登記之必要者，準用之。但不影響繼承人拋棄繼承或限定繼承之權利。
 
-> 釋：一、本條第一項照原條文不修正。二、增訂第二項，俾登記得迅速完成。以防債務人於查封後搶先辦理移轉或設定權利之登記。三、為維持登記制度之完整，貫徹民法第七五九條之規定，並避免債務人故不辦理登記，藉以逃避執行，特增訂第三、四項以利執行。
+* 12 當事人或利害關係人，對於執行法院強制執行之命令，或對於執行法官、書記官、執達員實施強制執行之方法，強制執行時應遵守之程序，或其他侵害利益之情事，得於強制執行程序終結前，為聲請或聲明異議。但強制執行不因而停止。前項聲請及聲明異議，由執行法院裁定之。不服前項裁定者，得為抗告。
 
-* 12 當事人或利害關係人對於強制執行之命令或對於執行推事、書記官、執達員實施強制執行之方法，強制執行時應遵守之程序或其他侵害利益之情事，得於強制執行程序終結前為聲請或聲明異議。但強制執行不因而停止。前項聲請及聲明異議，由執行法院裁定之。不服前項裁定者，得於五日內提起抗告。
+* 13 執行法院對於前條之聲請，聲明異議或抗告認為有理由時，應將原處分或程序撤銷或更正之。執行法院於前項撤銷或更正之裁定確定前，因必要情形或依聲請定相當並確實之擔保，得以裁定停止該撤銷或更正裁定之執行。當事人對前項裁定，不得抗告。
 
-* 13 執行法院對於前條之聲請、聲明異議或抗告，認為有理由時，應將原處分或程序撤銷或更正之。
+* 14 執行名義成立後，如有消滅或妨礙債權人請求之事由發生，債務人得於強制執行程序終結前，向執行法院對債權人提起異議之訴。如以裁判為執行名義時，其為異議原因之事實發生在前訴訟言詞辯論終結後者，亦得主張之。執行名義無確定判決同一之效力者，於執行名義成立前，如有債權不成立或消滅或妨礙債權人請求之事由發生，債務人亦得於強制執行程序終結前提起異議之訴。依前二項規定起訴，如有多數得主張之異議原因事實，應一併主張之。其未一併主張者，不得再行提起異議之訴。
 
-* 14 執行名義成立後，如有消滅或妨礙債權人請求之事由發生，債務人得於強制執行程序終結前，提起異議之訴，如以裁判為執行名義時，其為異議原因之事實發生在前訴訟言詞辯論終結後者，亦得主張之。
+* 14.1 債務人對於債權人依第四條之二規定聲請強制執行，如主張非執行名義效力所及者，得於強制執行程序終結前，向執行法院對債權人提起異議之訴。債權人依第四條之二規定聲請強制執行經執行法院裁定駁回者，得於裁定送達後十日之不變期間內，向執行法院對債務人提起許可執行之訴。
 
-* 15 第三人就執行標的物有足以排除強制執行之權利者，得於強制執行程序終結前，向執行法院對債權人提起異議之訴，如債務人亦否認其權利時，並得以債務人為被告。
+* 15 第三人就執行標的物有足以排除強制執行之權利者，得於強制執行程序終結前，向執行法院對債權人提起異議之訴。如債務人亦否認其權利時，並得以債務人為被告。
 
-* 16 債務人或第三人就強制執行事件得提起異議之訴時，執行處得指示其另行起訴，或諭知債權人，經其同意後，即由執行法院撤銷強制執行。
+* 16 債務人或第三人就強制執行事件得提起異議之訴時，執行法院得指示其另行起訴，或諭知債權人，經其同意後，即由執行法院撤銷強制執行。
 
-* 17 執行處如發見債權人查報之財產確非債務人所有者，應命債權人另行查報，於強制執行開始後始發見者，應由執行法院撤銷其執行處分。
+* 17 執行法院如發見債權人查報之財產確非債務人所有者，應命債權人另行查報，於強制執行開始後始發見者，應由執行法院撤銷其執行處分。
 
-* 18 強制執行程序開始後，除法律另有規定外，不停止執行。有回復原狀之聲請，或提起再審或異議之訴，或對於和解為繼續審判之請求，或提起宣告調解無效之訴、撤銷調解之訴，或對於第四條第一項第五款之裁定提起抗告時，法院因必要情形或依聲請定相當並確實之擔保，得為停止強制執行之裁定。當事人對於前項裁定，不得抗告。
+* 18 強制執行程序開始後，除法律另有規定外，不停止執行。有回復原狀之聲請，或提起再審或異議之訴，或對於和解為繼續審判之請求，或提起宣告調解無效之訴、撤銷調解之訴，或對於許可強制執行之裁定提起抗告時，法院因必要情形或依聲請定相當並確實之擔保，得為停止強制執行之裁定。
 
-> 釋：為免執行程序長期延宕，有損債權人之權益，故增訂第一項之規定。原條文第一項移列第二項。並於「提起再審或異議之訴」下增列「或對於和解為繼續審判之請求，或提起宣告調解無效之訴、撤銷調解之訴」，以減少實務上之困難。
+* 19 執行法院對於強制執行事件，認有調查之必要時，得命債權人查報，或依職權調查之。執行法院得向稅捐及其他有關機關、團體或知悉債務人財產之人調查債務人財產狀況，受調查者不得拒絕。但受調查者為個人時，如有正當理由，不在此限。
 
-* 19 強制執行事件有調查之必要時，除命債權人查報外，執行推事得自行或命書記官調查之。
+* 20 已發見之債務人財產不足抵償聲請強制執行之債權或不能發現債務人應交付之財產時，執行法院得因債權人之聲請，定期間命債務人據實報告該期間屆滿前一年內應供強制執行之財產狀況。
 
-* 20 已發見之債務人財產，不足抵償聲請強制執行之債權時，執行處得因債權人之聲請，命債務人報告其財產狀況。
+* 21 債務人受合法通知，無正當理由而不到場者，執行法院得拘提之。
 
-* 21 債務人受合法傳喚，無正當理由而不到場者，執行法院得拘提之。
+* 21.1 拘提，應用拘票。拘票應記載左列事項，由執行法官簽名：一、應拘提人姓名、性別、年齡、出生地及住所或居所，有必要時，應記載其足資辨別之特徵。但年齡、出生地、住所或居所不明者，得免記載。二、案由。三、拘提之理由。四、應到之日、時及處所。
 
-* 22 債務人有左列情形之一者，執行法院應命其提出擔保；無相當擔保者，得拘提、管收之：一、顯有履行義務之可能，故不履行者。二、顯有逃匿之虞者。三、就應供強制執行之財產有隱匿或處分之情事者。四、於調查執行標的物時，對於推事或書記官拒絕陳述者。債務人違反第二十條之規定，不為報告或為虛偽之報告者，執行法院得拘提、管收之。
+* 21.2 拘提，由執達員執行。
 
-* 23 擔保人故縱債務人逃亡者，執行法院得拘提、管收之；如於擔保書狀載明債務人逃亡或不履行由其負清償責任者，執行法院得因債權人之聲請，逕向擔保人為強制執行。
+* 22 債務人有左列情形之一者，執行法院得拘提之：一、顯有履行義務之可能故不履行者。二、顯有逃匿之虞者。三、就應供強制執行之財產有隱匿或處分之情事者。四、於調查執行標的物時，對於法官或書記官拒絕陳述者。五、違反第二十條之規定，不為報告或為虛偽之報告者。前項情形，執行法院得命債務人提供擔保，無相當擔保者，管收之。其非經拘提到場者亦同。第一項各款情形，必要時，執行法院得依職權或依聲請，限制債務人住居於一定之地域，但已提供相當擔保者，應解除其限制。前項限制住居，應通知債務人及有關機關。
 
-* 24 管收期限，不得逾三個月。有管收新原因發生時，對於債務人仍得再行管收，但以一次為限。
+* 22.1 管收，應用管收票。管收票，應記載左列事項，由執行法官簽名：一、應管收人之姓名、性別、年齡、出生地及住所或居所，有必要時，應記載其足資辨別之特徵。二、案由。三、管收之理由。
 
-* 25 債務人履行債務之義務，不因債務人或依本法得管收之人被管收而免除。第二十條至第二十二條及第二十四條關於債務人拘提、管收及應負義務之規定，於左列各款之人，亦適用之：一、債務人為未成年人或禁治產人者，其法定代理人。二、商號之經理人或清算人，其為合夥組織者，其執行業務之合夥人。三、公司之負責人。四、其他法人之負責人。五、債務人死亡者，其遺產管理人或遺囑執行人。
+* 22.2 執行管收，由執達員將應管收人送交管收所。管收所所長驗收後，應於管收票附記送到之年、月、日、時，並簽名。
 
-> 釋：一、第一項增列「或依本法得管收之」係配合第二項之增訂。二、目前社會上常有利用債務人法定代理人、經理人、公司董事等之身分，以未成年人，公司商號之名義與他人交易後，即故不清償債務，致債權人之合法權益，不能獲得充分之保障。爰參照破產法第三條之規定，增訂第二項以應實際需要。
+* 22.3 債務人有左列情形之一者，不得管收，其情形發生於管收後者，應停止管收：一、因管收而其一家生計有難以維持之虞者。二、懷胎五月以上或生產後二月未滿者。三、現罹疾病，恐因管收而不能治療者。
 
-* 26 管收條例，另定之。
+* 22.4 被管收人有左列情形之一者，應即釋放：一、管收原因消滅者。二、已就債務提出相當擔保者。三、管收期限屆滿者。四、執行完結者。
 
-* 27 債務人無財產可供強制執行，或雖有財產經強制執行後所得之數額仍不足清償債務者，經債權人同意，得命債務人寫立書據，載明俟有資力之日償還。前項情形，如債權人不同意時，應於二個月內續行調查，經查明確無財產或命債權人查報而到期故意不為報告，執行法院應發給憑證，交債權人收執，載明俟發見有財產時，再予強制執行。
+* 22.5 拘提、管收，除本法別有規定外，準用刑事訴訟法關於拘提、羈押之規定。
+
+* 23 債務人依第二十二條第二項、第三項及第二十二條之四第二款提供之擔保，執行法院得許由該管區域內有資產之人具保證書代之。前項具保證書人，如於保證書載明債務人逃亡或不履行義務時，由其負責清償或賠償一定之金額者，執行法院得因債權人之聲請，逕向具保證書人為強制執行。
+
+* 24 管收期限不得逾三個月。有管收新原因發生時，對於債務人仍得再行管收，但以一次為限。
+
+* 25 債務人履行債務之義務，不因債務人或依本法得管收之人被管收而免除。關於債務人拘提、管收及應負義務之規定，於左列各款之人亦適用之：一、債務人為無行為能力人或限制行為能力人者，其法定代理人。二、債務人失蹤者，其財產管理人。三、債務人死亡者，其繼承人、遺產管理人、遺囑執行人或特別代理人。四、法人或非法人團體之負責人、獨資商號之經理人。前項各款之人，於喪失資格或解任前，具有報告之義務或拘提、管收之原因者，在喪失資格或解任後，於執行必要範圍內，仍得命其報告或拘提、管收之。
+
+* 26 管收所之設置及管理，以法律定之。
+
+* 27 債務人無財產可供強制執行，或雖有財產經強制執行後所得之數額仍不足清償債務時，執行法院應於二個月內續行調查，經調查確無財產或命債權人查報而到期不為報告者，應發給憑證，交債權人收執，載明俟發見有財產時，再予強制執行。
 
 * 28 強制執行之費用，以必要部分為限，由債務人負擔，並應與強制執行之債權同時收取。前項費用，執行法院得命債權人代為預納。
 
-* 29 債權人因強制執行而支出之費用，得求償於債務人者，得準用民事訴訟法第九十一條之規定，向執行法院聲請確定其數額。前項費用及取得執行名義之費用，得求償於債務人者，得就強制執行之財產，先受清償。
+* 28.1 強制執行程序如有左列情形之一，致不能進行時，執行法院得以裁定駁回其強制執行之聲請，並於裁定確定後，撤銷已為之執行處分：一、債權人於執行程序中應為一定必要之行為，無正當理由而不為，經執行法院再定期限命為該行為，無正當理由逾期仍不為者。二、執行法院命債權人於相當期限內預納必要之執行費用而不預納者。
 
-* 30 依判決為強制執行，其判決經變更或廢棄時，受訴法院因債務人之聲請，應於其判決內命債權人償還強制執行之費用。前項規定，於判決以外之執行名義經撤銷時準用之。
+* 28.2 民事強制執行，其執行標的金額或價額未滿新臺幣五千元者，免徵執行費；新臺幣五千元以上者，每百元徵收七角，其畸零之數不滿百元者，以百元計算。前項規定，於聲明參與分配者，適用之。執行非財產案件，徵收執行費新臺幣三千元。執行人員之食、宿、舟、車費，不另徵收。關於強制執行費用，本法未規定者，準用民事訴訟費用有關之規定。
 
-* 31 因強制執行所得之金額，如有多數債權人參與分配時，執行處應作成分配表，並指定分配期日，於分配期日前三日，以繕本交付債務人及各債權人或並置於法院書記室，任聽閱覽。
+* 29 債權人因強制執行而支出之費用，得求償於債務人者，得準用民事訴訟法第九十一條之規定，向執行法院聲請確定其數額。前項費用及其他為債權人共同利益而支出之費用，得求償於債務人者，得就強制執行之財產先受清償。
 
-* 32 他債權人參與分配者，應於標的物拍賣或變賣終結前，其不經拍賣或變賣者，應於當次分配表作成前，以書狀聲明之。逾前項期間聲明參與分配者，僅得就前項債權人受償餘額而受清償。如尚應就債務人其他財產執行時，其債權額與前項債權餘額，除有優先權者外，應按其數額平均受償。
+* 30 依判決為強制執行，其判決經變更或廢棄時，受訴法院因債務人之聲請，應於其判決內，命債權人償還強制執行之費用。前項規定，於判決以外之執行名義經撤銷時，準用之。
 
-> 釋：一、現行法條文所謂「強制執行程序終結」，係指因強制執行所得之金額已交付或分配與各債權人之前，他債權人仍得參與分配，致分配表難於確定。債務人亦易偽造債權參與分配。為保障正當權利人之權益，有限制聲明參與分配時間之必要。按前補訂民事執行辦法第二十五條第一項規定「他債權人參與分配者，應於第一次拍賣期日終竣前聲明之」，限制過嚴。而現行法規定於強制執行程序終結前均得為之，失之過寬。爰修正為他債權人參與分配者，應於標的物拍賣或變賣終結前，其不經拍賣或變賣者，於當次分配表作成前，以書狀聲明之，以謀兼顧。二、執行標的物已交付債權人者，顯已執行終結，不得聲明參與分配，為當然之解釋，無以明文規定之必要。又執行處收受後，應即交付債權人或依法分配，不宜視為已由債務人向債權人清償，以杜紛擾。原條文「如執行標的不經拍賣」以下文字，應予刪除。三、增訂第二項，使逾期聲明參與分配者，得就除額受償。如尚應就債務人其他財產執行時，仍得受分配，以示公平。
+* 30.1 強制執行程序，除本法有規定外，準用民事訴訟法之規定。
 
-* 33 對於已開始實施強制執行之債務人財產，他債權人不得再聲請強制執行，有再聲請強制執行者，視為參與分配之聲明。
+* 31 因強制執行所得之金額，如有多數債權人參與分配時，執行法院應作成分配表，並指定分配期日，於分配期日五日前以繕本交付債務人及各債權人，並置於民事執行處，任其閱覽。
 
-* 34 有執行名義之債權人聲明參與分配時，應提出該執行名義之證明文件。無執行名義之債權人聲明參與分配時，應提出其債權之證明，並釋明債務人無他財產足供清償。執行處接受前項聲明後，應通知各債權人及債務人，命於三日內為是否承認聲明人參與之回答。
+* 32 他債權人參與分配者，應於標的物拍賣、變賣終結或依法交債權人承受之日一日前，其不經拍賣或變賣者，應於當次分配表作成之日一日前，以書狀聲明之。逾前項期間聲明參與分配者，僅得就前項債權人受償餘額而受清償；如尚應就債務人其他財產執行時，其債權額與前項債權餘額，除有優先權者外，應按其數額平均受償。
 
-* 35 債權人及債務人對於參與分配無異議時，執行處應以聲明參與分配之債權加入分配表。債權人或債務人不於前條第三項之期間內回答，或不於分配期日到場者，以無異議論。
+* 33 對於已開始實施強制執行之債務人財產，他債權人再聲請強制執行者，已實施執行行為之效力，於為聲請時及於該他債權人，應合併其執行程序，並依前二條之規定辦理。
 
-* 36 債權人或債務人對於參與分配，如有異議，執行處應即通知聲明人，聲明人如仍欲參與分配，應於十日內對異議人另行起訴，並應向執行處為起訴之證明，經證明後，其債權所應受分配之金額，應行提存。
+* 33.1 執行人員於實施強制執行時，發現債務人之財產業經行政執行機關查封者，不得再行查封。前項情形，執行法院應將執行事件連同卷宗函送行政執行機關合併辦理，並通知債權人。行政執行機關就已查封之財產不再繼續執行時，應將有關卷宗送請執行法院繼續執行。
+
+* 33.2 執行法院已查封之財產，行政執行機關不得再行查封。前項情形，行政執行機關應將執行事件連同卷宗函送執行法院合併辦理，並通知移送機關。執行法院就已查封之財產不再繼續執行時，應將有關卷宗送請行政執行機關繼續執行。
+
+* 34 有執行名義之債權人聲明參與分配時，應提出該執行名義之證明文件。依法對於執行標的物有擔保物權或優先受償權之債權人，不問其債權已否屆清償期，應提出其權利證明文件，聲明參與分配。執行法院知有前項債權人者，應通知之。知有債權人而不知其住居所或知有前項債權而不知孰為債權人者，應依其他適當方法通知或公告之。經通知或公告仍不聲明參與分配者，執行法院僅就已知之債權及其金額列入分配。其應徵收之執行費，於執行所得金額扣繳之。第二項之債權人不聲明參與分配，其債權金額又非執行法院所知者，該債權對於執行標的物之優先受償權，因拍賣而消滅，其已列入分配而未受清償部分，亦同。執行法院於有第一項或第二項之情形時，應通知各債權人及債務人。
+
+* 34.1 政府機關依法令或本於法令之處分，對義務人有公法上金錢債權，依行政執行法得移送執行者，得檢具證明文件，聲明參與分配。
+
+* 35 （刪除）
+
+* 36 （刪除）
 
 * 37 實行分配時，應由書記官作成分配筆錄。
 
-* 38 參與分配之債權人，除有優先權者外，應按其債權額數平均分配。
+* 38 參與分配之債權人，除依法優先受償者外，應按其債權額數平均分配。
 
-* 39 債權人對於分配表金額之計算及分配之次序，有不同意者，應於分配期日前，向執行法院提出書狀，聲明異議。
+* 39 債權人或債務人對於分配表所載各債權人之債權或分配金額有不同意者，應於分配期日一日前，向執行法院提出書狀，聲明異議。前項書狀，應記載異議人所認原分配表之不當及應如何變更之聲明。
 
-> 釋：查他債權人得否參與分配，其債權額應否列入分配表，應依第三十二條至第三十六條之規定決定之。本條債權人對於分配表之異議，應以金額之計算及分配之次序有不同意者為限，爰修正之。
+* 40 執行法院對於前條之異議認為正當，而到場之債務人及有利害關係之他債權人不為反對之陳述或同意者，應即更正分配表而為分配。
 
-* 40 執行法院對於前條之異議認為正當，而到場之他債權人不為反對之陳述者，應即更正分配表而為分配。異議未依前項規定終結者，應就無異議之部分，先為分配。
+* 40.1 依前條第一項更正之分配表，應送達於未到場之債務人及有利害關係之他債權人。前項債務人及債權人於受送達後三日內不為反對之陳述者，視為同意依更正分配表實行分配。其有為反對陳述者，應通知聲明異議人。
 
-* 41 異議未終結者，聲明異議人非自分配期日起十日內對於他債權人起訴，並向執行處為起訴之證明，執行處得依原定分配表，實行分配。
+* 41 異議未終結者，為異議之債權人或債務人，得向執行法院對為反對陳述之債權人或債務人提起分配表異議之訴。但異議人已依同一事由就有爭執之債權先行提起其他訴訟者，毋庸再行起訴，執行法院應依該確定判決實行分配。債務人對於有執行名義而參與分配之債權人為異議者，僅得以第十四條規定之事由，提起分配表異議之訴。聲明異議人未於分配期日起十日內向執行法院為前二項起訴之證明者，視為撤回其異議之聲明；經證明者，該債權應受分配之金額，應行提存。前項期間，於第四十條之一有反對陳述之情形，自聲明異議人受通知之日起算。
 
-* 42 強制執行事件，應於開始強制執行後三個月內完結。但遇有特別情形，得報明院長酌予展限，每次展限，不得逾三個月。強制執行事件，依其性質應分期執行者，不適用前項之規定。
+* 42 （刪除）
 
-* 43 依外國法院確定判決聲請強制執行者，以該判決無民事訴訟法第四百零二條各款情形之一，並經中華民國法院以判決宣示許可其執行者為限，得為強制執行。
+* 43 （刪除）
 
-> 釋：「第四百零一條」改為「第四百零二條」。俾與民事訴訟法修正後之條次符合。
-
-* 44 強制執行程序除本法有規定外，準用民事訴訟法之規定。
+* 44 （刪除）
 
 * 45 動產之強制執行，以查封、拍賣或變賣之方法行之。
 
-* 46 查封動產，由執行推事命書記官督同執達員為之，於必要時，得請自治團體、商會或同業公會協助。
+* 46 查封動產，由執行法官命書記官督同執達員為之。於必要時得請有關機關、自治團體、商業團體、工業團體或其他團體，或對於查封物有專門知識經驗之人協助。
 
-* 47 查封動產，由執行人員依左列方法行之：一、標封。二、烙印或火漆印。前項方法，於必要時得併用之。
+* 47 查封動產，由執行人員實施占有。其將查封物交付保管者，並應依左列方法行之：一、標封。二、烙印或火漆印。三、其他足以公示查封之適當方法。前項方法，於必要時得併用之。
 
-* 48 查封時得檢查、啟視債務人居住所、事務所、倉庫、箱櫃及其他藏置物品之處所。查封時如債務人不在場，應命其家屬或鄰右之有辨別事理能力者到場，於必要時得請警察到場。
+* 48 查封時，得檢查、啟視債務人居住所、事務所、倉庫、箱櫃及其他藏置物品之處所。查封時，如債務人不在場，應命其家屬或鄰右之有辨別事理能力者到場，於必要時，得請警察到場。
 
-* 49 查封時遇有抗拒，得請警察協助。
+* 49 （刪除）
 
 * 50 查封動產，以其價格足清償強制執行之債權額及債務人應負擔之費用者為限。
 
-* 51 查封之效力及於查封物之孳息。實施查封後，債務人就查封物所為移轉、設定負擔或其他有礙執行效果之行為，對於債權人不生效力。實施查封後，第三人未經執行法院允許，占有查封物或為其他有礙執行效果之行為者，執行法院得依聲請排除之。
+* 50.1 應查封動產之賣得價金，清償強制執行費用後，無賸餘之可能者，執行法院不得查封。查封物賣得價金，於清償優先債權及強制執行費用後，無賸餘之可能者，執行法院應撤銷查封，將查封物返還債務人。前二項情形，應先詢問債權人之意見，如債權人聲明於查封物賣得價金不超過優先債權及強制執行費用時，願負擔其費用者，不適用之。
 
-> 釋：一、第一項照原條文不修正。二、查封之效力如何，非但與執行有關，且涉及是否犯罪之問題（刑法第一百卅九條），現行法規定過於簡略，爰增訂第二項。三、第三人未經執行法院允許而占有查封物或為其他有礙執行效果之行為者，屢見不鮮，如須一一取得執行名義始得排除之，曠日持久，影響執行效果至大。爰增訂第三項，以資因應，而宏績效。
+* 51 查封之效力及於查封物之天然孳息。實施查封後，債務人就查封物所為移轉、設定負擔或其他有礙執行效果之行為，對於債權人不生效力。實施查封後，第三人未經執行法院允許，占有查封物或為其他有礙執行效果之行為者，執行法院得依職權或依聲請排除之。
 
-* 52 查封時應酌留債務人及其家屬二個月間生活所必需之物。前項期間，執行推事審核債務人家庭狀況，得伸縮之。但不得短於一個月或超過三個月。
+* 52 查封時，應酌留債務人及其共同生活之親屬二個月間生活所必需之食物、燃料及金錢。前項期間，執行法官審核債務人家庭狀況，得伸縮之。但不得短於一個月或超過三個月。
 
-* 53 債務人及其家屬所必需之衣服、寢具、餐具及職業上或教育上所必需之器具、物品，不得查封。遺像、牌位、墓碑及其他祭祀、禮拜所用之物，不得查封。
+* 53 左列之物不得查封：一、債務人及其共同生活之親屬所必需之衣服、寢具及其他物品。二、債務人及其共同生活之親屬職業上或教育上所必需之器具、物品。三、債務人所受或繼承之勳章及其他表彰榮譽之物品。四、遺像、牌位、墓碑及其他祭祀、禮拜所用之物。五、未與土地分離之天然孳息不能於一個月內收穫者。六、尚未發表之發明或著作。七、附於建築物或其他工作物，而為防止災害或確保安全，依法令規定應設備之機械或器具、避難器具及其他物品。前項規定斟酌債權人及債務人狀況，有顯失公平情形，仍以查封為適當者，執行法院得依聲請查封其全部或一部。其經債務人同意者，亦同。
 
-* 54 查封時，書記官應作成查封筆錄及查封物品清單。查封筆錄，應載明左列事項：一、為查封原因之權利。二、動產之所在地、種類、數量、品質及其他應記明之事項。三、債權人及債務人。四、查封年、月、日。五、查封之動產保管人。六、保管方法。查封人員，應於前項筆錄簽名；如有保管人及依第四十八條第二項規定之人員到場者，亦應簽名。
+* 54 查封時，書記官應作成查封筆錄及查封物品清單。查封筆錄，應載明左列事項：一、為查封原因之權利。二、動產之所在地、種類、數量、品質及其他應記明之事項。三、債權人及債務人。四、查封開始之日時及終了之日時。五、查封之動產保管人。六、保管方法。查封人員，應於前項筆錄簽名，如有保管人及依第四十八條第二項規定之人員到場者，亦應簽名。
 
-* 55 星期日或其他休息日及日出前、日沒後，不得實施關於查封之行為。但有急迫情事，經執行推事許可者，不在此限。日沒前已開始為查封行為者，得繼續至日沒後。第一項許可之命令，應於查封時提示債務人。
+* 55 星期日或其他休息日及日出前、日沒後，不得進入有人居住之住宅實施關於查封之行為。但有急迫情事，經執行法官許可者，不在此限。日沒前已開始為查封行為者，得繼續至日沒後。第一項許可之命令，應於查封時提示債務人。
 
-* 56 書記官、執達員於查封時，發見債務人之動產，業經因案受查封者，應速將其查封原因，報告執行推事。
+* 56 書記官、執達員於查封時發見債務人之動產業經因案受查封者，應速將其查封原因報告執行法官。
 
-* 57 查封後執行推事應速定拍賣期日。查封日至拍賣期日，至少應留七日之期間。但經債權人及債務人之同意，或因查封物之性質須迅速拍賣者，不在此限。
+* 57 查封後，執行法官應速定拍賣期日。查封日至拍賣期間，至少應留七日之期間。但經債權人及債務人之同意或因查封物之性質，須迅速拍賣者，不在此限。前項拍賣期日不得多於一個月。但因查封物之性質或有不得已之事由者，不在此限。
 
-* 58 查封後債務人得於拍賣期日前，提出現款，聲請撤銷查封。
+* 58 查封後，債務人得於拍定前提出現款，聲請撤銷查封。拍定後，在拍賣物所有權移轉前，債權人撤回強制執行之聲請者，應得拍定人之同意。
 
-* 59 查封之動產，應移置於該管法院所指定之貯藏所，其不便於搬運或不適於貯藏所保管者，執行處得委託妥適之保管人保管之，認為適當時，亦得以債權人為保管人。查封物除貴重物品及有價證券外，經債權人之同意，得使債務人保管之。債務人為保管人時，應諭知刑法所定損壞、除去或汙穢查封標示或為違背其效力之行為之處罰。查封物交保管人時，應命保管人出具收據。
+* 59 查封之動產，應移置於該管法院所指定之貯藏所或委託妥適之保管人保管之。認為適當時，亦得以債權人為保管人。查封物除貴重物品及有價證券外，經債權人同意或認為適當時，得使債務人保管之。查封物交保管人時，應告知刑法所定損壞、除去或污穢查封標示或為違背其效力之行為之處罰。查封物交保管人時，應命保管人出具收據。查封物以債務人為保管人時，得許其於無損查封物之價值範圍內，使用之。
 
-* 60 在拍賣期日前、執行處因債權人及債務人之聲請，得不經拍賣程序，將查封物之全部或一部變賣之。查封物易腐壞者，執行處亦得不經拍賣程序，依職權變賣之。
+* 59.1 查封之有價證券，須於其所定之期限內為權利之行使或保全行為者，執行法院應於期限之始期屆至時，代債務人為該行為。
 
-* 61 拍賣動產，由執行推事命書記官督同執達員於執行法院或動產所在地行之。但執行處認為適當時，得委託拍賣行拍賣之。委託拍賣行拍賣時，執行處應派員監督之。
+* 59.2 查封未與土地分離之天然孳息者，於收穫期屆至後，始得拍賣。前項拍賣，得於採收後為之，其於分離前拍賣者，應由買受人自行負擔費用採收之。
 
-* 62 查封物為貴重物品，而其價格不易確定者，執行處應命鑑定人鑑定之。
+* 60 查封物應公開拍賣之。但有左列情形之一者，執行法院得不經拍賣程序，將查封物變賣之：一、債權人及債務人聲請或對於查封物之價格為協議者。二、有易於腐壞之性質者。三、有減少價值之虞者。四、為金銀物品或有市價之物品者。五、保管困難或需費過鉅者。第七十一條之規定，於前項變賣準用之。
 
-* 63 執行處應通知債權人及債務人於拍賣期日到場，無法通知或屆期不到場者，拍賣不因而停止。
+* 60.1 查封之有價證券，執行法院認為適當時，得不經拍賣程序，準用第一百十五條至第一百十七條之規定處理之。
 
-* 64 拍賣動產，應由執行法院先期公告。前項公告，應載明左列事項：一、拍賣物之種類、數量、品質及其他應記明之事項。二、拍賣之原因、日、時及場所。三、閱覽拍賣物及查封筆錄之處所及日、時。四、定有拍賣價金之交付期限者，其期限。
+* 61 拍賣動產，由執行法官命書記官督同執達員於執行法院或動產所在地行之。前項拍賣，執行法院認為必要時，得委託拍賣行或適當之人行之。但應派員監督。
 
-* 65 拍賣公告，應揭示於執行法院及拍賣場所；如認為必要或因債權人或債務人之聲請，並得登載於公報或新聞紙；如當地有其他習慣者，並得依其習慣方法公告之。
+* 62 查封物為貴重物品而其價格不易確定者，執行法院應命鑑定人鑑定之。
+
+* 63 執行法院應通知債權人及債務人於拍賣期日到場，無法通知或屆期不到場者，拍賣不因而停止。
+
+* 64 拍賣動產，應由執行法院先期公告。前項公告，應載明左列事項：一、拍賣物之種類、數量、品質及其他應記明之事項。二、拍賣之原因、日時及場所。三、閱覽拍賣物及查封筆錄之處所及日時。四、定有拍賣價金之交付期限者，其期限。五、定有應買之資格或條件者，其資格或條件。六、定有保證金者，其金額。
+
+* 65 拍賣公告，應揭示於執行法院及動產所在地之鄉鎮市（區）公所或拍賣場所，如認為必要或因債權人或債務人之聲請，並得登載於公報或新聞紙，如當地有其他習慣者，並得依其習慣方法公告之。
 
 * 66 拍賣，應於公告五日後行之。但因物之性質須迅速拍賣者，不在此限。
 
-* 67 金銀物品及有市價之物品，得不經拍賣程序，逕依市價變賣之。
+* 67 （刪除）
 
-* 68 拍賣物之交付，應與價金之交付，同時行之。
+* 68 拍賣物之交付，應於價金繳足時行之。
+
+* 68.1 執行法院於有價證券拍賣後，得代債務人為背書或變更名義與買受人之必要行為，並載明其意旨。
+
+* 68.2 拍定人未繳足價金者，執行法院應再拍賣。再拍賣時原拍定人不得應買。如再拍賣之價金低於原拍賣價金及因再拍賣所生之費用者，原拍定人應負擔其差額。前項差額，執行法院應依職權以裁定確定之。原拍定人繳納之保證金不足抵償差額時，得依前項裁定對原拍定人強制執行。
 
 * 69 拍賣物買受人就物之瑕疵無擔保請求權。
 
-* 70 執行處因債權人或債務人之聲請，或認為必要時，應依職權於拍賣前預定拍賣物之底價，並得酌定保證金額。執行處定底價時，應詢問債權人及債務人之意見。但無法通知或屆期不到場者，不在此限。拍定應就應買人所出之最高價，高呼三次後為之。應買人所出之最高價，如低於底價，或雖未定底價而債權人或債務人對於應買人所出之最高價，認為不足而為反對之表示時，執行拍賣人應不為拍定，由執行處定期再行拍賣。拍賣物依前項規定，再行拍賣時，應拍歸出價最高之應買人。但其最高價不足底價百分之六十，或雖未定底價，而其最高價顯不相當者，執行處應作價交債權人承受；債權人不承受時，執行法院應撤銷查封，將拍賣物返還債務人。
+* 70 執行法院因債權人或債務人之聲請，或認為必要時，應依職權於拍賣前預定拍賣物之底價，並得酌定保證金額，命應買人於應買前繳納之。未照納者，其應買無效。執行法院定底價時，應詢問債權人及債務人之意見，但無法通知或屆期不到場者，不在此限。拍定，應就應買人所出之最高價，高呼三次後為之。應買人所出之最高價，如低於底價，或雖未定底價而債權人或債務人對於應買人所出之最高價，認為不足而為反對之表示時，執行拍賣人應不為拍定，由執行法院定期再行拍賣。但債權人願依所定底價承受者，執行法院應交債權人承受。拍賣物依前項規定，再行拍賣時，應拍歸出價最高之應買人。但其最高價不足底價百分之五十；或雖未定底價，而其最高價顯不相當者，執行法院應作價交債權人承受；債權人不承受時，執行法院應撤銷查封，將拍賣物返還債務人。債務人不得應買。
 
-> 釋：本條第五項所定再行拍賣，應買人所出最高價如不足底價百分之六十，或雖未定底價，而其最高價顯不相當者，不應許其拍定。此際自應作交債權人承受，債權人不承受時，即撤銷查封，將拍賣物返還債務人，以維護當事人之權益，爰增設但書之。
-
-* 71 拍賣物無人應買時，執行處應作價交債權人收受；債權人不收受時，應由執行法院撤銷查封，將拍賣物返還債務人。
+* 71 拍賣物無人應買時，執行法院應作價交債權人承受，債權人不願承受或依法不能承受者，應由執行法院撤銷查封，將拍賣物返還債務人。但拍賣物顯有賣得相當價金之可能者，準用前條第五項之規定。
 
 * 72 拍賣於賣得價金足以清償強制執行之債權額及債務人應負擔之費用時，應即停止。
 
-* 73 拍賣終結後，書記官應作成拍賣筆錄，載明左列事項：一、拍賣物之種類、數量、品質及其他應記明之事項。二、債權人及債務人。三、拍賣之買受人姓名、住址及其應買之最高價額。四、拍賣不成立或停止時，其原因。五、拍賣之日、時及場所。六、作成拍賣筆錄之處所及年、月、日。前項筆錄，應由執行拍賣人簽名。
+* 73 拍賣終結後，書記官應作成拍賣筆錄，載明左列事項：一、拍賣物之種類、數量、品質及其他應記明之事項。二、債權人及債務人。三、拍賣之買受人姓名、住址及其應買之最高價額。四、拍賣不成立或停止時，其原因。五、拍賣之日時及場所。六、作成拍賣筆錄之處所及年、月、日。前項筆錄，應由執行拍賣人簽名。
 
-* 74 拍賣物賣得價金，扣除強制執行之費用及取得執行名義之費用後，應將餘額交付債權人；其餘額超過債權人所應受償之數額時，應將超過額交付債務人。
+* 74 拍賣物賣得價金，扣除強制執行之費用後，應將餘額交付債權人，其餘額超過債權人取得執行名義之費用及其債權所應受償之數額時，應將超過額交付債務人。
 
-* 75 不動產之強制執行，以查封、拍賣、強制管理之方法行之。應拍賣之財產有動產及不動產者，執行法院得合併拍賣之。前項合併拍賣之動產，適用關於不動產拍賣之規定。
+* 75 不動產之強制執行，以查封、拍賣、強制管理之方法行之。前項拍賣及強制管理之方法，於性質上許可並認為適當時，得併行之。建築物及其基地同屬於債務人所有者，得併予查封、拍賣。應拍賣之財產有動產及不動產者，執行法院得合併拍賣之。前項合併拍賣之動產，適用關於不動產拍賣之規定。
 
-> 釋：應拍賣者，如為債務人之營業財產，常包括動產與不動產在內。如分別拍賣，可能減損其價值，影響當事人之利益。爰增訂第二項第三項，以應需要。
+* 76 查封不動產，由執行法官命書記官督同執達員依左列方法行之：一、揭示。二、封閉。三、追繳契據。前項方法，於必要時得併用之。已登記之不動產，執行法院並應先通知登記機關為查封登記，其通知於第一項執行行為實施前到達登記機關時，亦發生查封之效力。
 
-* 76 查封不動產，由執行推事命書記官督同執達員，依左列方法行之：一、揭示。二、封閉。三、迫繳契據。前項方法，於必要時得併用之。
+* 77 查封時，書記官應作成查封筆錄，載明左列事項：一、為查封原因之權利。二、不動產之所在地、種類、實際狀況、使用情形及其他應記明之事項。三、債權人及債務人。四、查封方法及其實施之年、月、日、時。五、查封之不動產有保管人者，其保管人。查封人員及保管人應於前項筆錄簽名，如有依第四十八條第二項規定之人員到場者，亦應簽名。
 
-* 77 查封時書記官應作成查封筆錄，載明左列事項：一、為查封原因之權利。二、不動產之所在地、種類及其他應記明之事項。三、債權人及債務人。四、查封年、月、日。五、查封之不動產保管人。查封人員及保管人，應於前項筆錄簽名；如有依第四十八條第二項規定之人員到場者，亦應簽名。
+* 77.1 執行法官或書記官，為調查不動產之實際狀況、占有使用情形或其他權利關係，得訊問債務人或占有之第三人，並得命其提出有關文書。前項情形，債務人無正當理由拒絕陳述或提出文書，或為虛偽陳述或提出虛偽之文書者，準用第二十二條之規定。第三人有前項情形或拒絕到場者，執行法院得以裁定處新臺幣一萬五千元以下之罰鍰。前項裁定得為抗告，抗告中應停止執行。
 
-* 78 已查封之不動產，執行法院得許債務人於必要範圍內，管理或使用之。
+* 78 已查封之不動產，以債務人為保管人者，債務人仍得為從來之管理或使用。由債務人以外之人保管者，執行法院得許債務人於必要範圍內管理或使用之。
 
-* 79 查封之不動產保管或管理，執行法院得交由自治團體、商會或同業公會為之。
+* 79 查封之不動產保管或管理，執行法院得交由有關機關、自治團體、商業團體、工業團體或其他團體為之。
 
-* 80 拍賣不動產，執行法院應命鑑定人就該不動產估定價格，經核定後為拍賣最低價額。
+* 80 拍賣不動產，執行法院應命鑑定人就該不動產估定價格，經核定後，為拍賣最低價額。
 
-* 81 拍賣不動產，應由執行法院先期公告。前項公告，應載明左列事項：一、不動產之所在地、種類及其他應記明之事項。二、拍賣之原因、日期及場所，如以投標方法拍賣者，其開標之日、時及場所，定有保證金額者，其金額。三、拍賣最低價額。四、交付價金之期限。五、閱覽查封筆錄之處所及日、時。
+* 80.1 不動產之拍賣最低價額不足清償優先債權及強制執行之費用者，執行法院應將其事由通知債權人。債權人於受通知後七日內，得證明該不動產賣得價金有賸餘可能或指定超過該項債權及費用總額之拍賣最低價額，並聲明如未拍定願負擔其費用而聲請拍賣。逾期未聲請者，執行法院應撤銷查封，將不動產返還債務人。依債權人前項之聲請為拍賣而未拍定，債權人亦不承受時，執行法院應公告願買受該不動產者，得於六個月內依原定拍賣條件為應買之表示，執行法院於訊問債權人及債務人意見後，許其應買；債權人復願承受者亦同。逾期無人應買或承受者，執行法院應撤銷查封，將不動產返還債務人。不動產由順位在先之扺押權人或其他優先受償權人聲請拍賣者，不適用前二項之規定。第一項第二項關於撤銷查封將不動產返還債務人之規定，於該不動產已併付強制管理之情形；或債權人已聲請另付強制管理而執行法院認為有實益者，不適用之。
+
+* 81 拍賣不動產，應由執行法院先期公告。前項公告，應載明左列事項：一、不動產之所在地、種類、實際狀況、占有使用情形及其應記明之事項。二、拍賣之原因、日期及場所。如以投標方法拍賣者，其開標之日時及場所，定有保證金額者，其金額。三、拍賣最低價額。四、交付價金之期限。五、閱覽查封筆錄之處所及日、時。六、定有應買資格或條件者，其資格或條件。七、拍賣後不點交者，其原因。八、定有應買人察看拍賣物之日、時者，其日、時。
 
 * 82 拍賣期日距公告之日，不得少於十四日。
 
-* 83 拍賣不動產，由執行推事命書記官督同執達員，於執行法院或其他場所為之。
+* 83 拍賣不動產，由執行法官命書記官督同執達員於執行法院或其他場所為之。
 
-* 84 拍賣公告，應揭示於執行法院及該不動產所在地；如當地有公報或新聞紙，亦應登載；如有其他習慣者，並得依其習慣方法公告之。
+* 84 拍賣公告，應揭示於執行法院及不動產所在地或其所在地之鄉鎮市（區）公所，如當地有其他習慣者，並得依其習慣方法公告之。拍賣公告，如當地有公報或新聞紙者，並應登載，但不動產價值過低者，得不予登載。
 
 * 85 拍賣不動產，執行法院得因債權人或債務人之聲請或依職權，以投標之方法行之。
 
 * 86 以投標方法拍賣不動產時，執行法院得酌定保證金額，命投標人於開標前繳納之。
 
-* 87 投標人應以書件密封投入執行法院所設之標匭。前項書件，應載明左列事項：一、投標人之姓名、年齡、住址及職業。二、願買之不動產。三、願出之價額。
+* 87 投標人應以書件密封，投入執行法院所設之標匭。前項書件，應載明左列事項：一、投標人之姓名、年齡及住址。二、願買之不動產。三、願出之價額。
 
-* 88 開標應由執行推事當眾開示，並朗讀之。
+* 88 開標應由執行法官當眾開示，並朗讀之。
 
 * 89 投標應繳納保證金而未照納者，其投標無效。
 
-* 90 投標人願出之最高價額相同者，以抽籤定其得標人。
+* 90 投標人願出之最高價額相同者，以當場增加之金額最高者為得標人；無人增加價額者，以抽籤定其得標人。前項得標人未於公告所定期限內繳足價金者，再行拍賣。但未中籤之投標人仍願按原定投標條件依法承買者，不在此限。
 
-* 91 拍賣之不動產無人應買，或應買人所出之最高價未達拍賣最低價額，而債權人願承受者，執行法院應依該次拍賣所定之最低價額，將不動產交債權人承受，並發給權利移轉證書。其不願承受或依法不得承受者，由執行法院定期再行拍賣。依前項規定再行拍賣時，執行法院應酌減拍賣最低價額；酌減數額不得逾百分之二十。
-
-> 釋：為求執行程序得以迅速終結及兼顧雙方之利益特簡化執行程序，使供拍賣之不動產，於無人應買或應買人所出之最高價未達拍賣最低價額時，許債權人依該次拍賣所定之最低價額承受。債權人不願承受或依法不得承受時，始行減價拍賣。爰修正第一項。
+* 91 拍賣之不動產無人應買或應買人所出之最高價未達拍賣最低價額，而到場之債權人於拍賣期日終結前聲明願承受者，執行法院應依該次拍賣所定之最低價額，將不動產交債權人承受，並發給權利移轉證書。其無人承受或依法不得承受者，由執行法院定期再行拍賣。依前項規定再行拍賣時，執行法院應酌減拍賣最低價額；酌減數額不得逾百分之二十。
 
 * 92 再行拍賣期日，無人應買或應買人所出之最高價，未達於減定之拍賣最低價額者，準用前條之規定；如再行拍賣，其酌減數額，不得逾減定之拍賣最低價額百分之二十。
 
-> 釋：本條「應準用前條．．．．」中之「應」字係贅文予以刪除。
+* 93 前二條再行拍賣之期日，距公告之日，不得少於十日多於三十日。
 
-* 93 前二條再行拍賣之期日，距公告之日，不得少於十日，多於三十日。
+* 94 債權人有二人以上願承受者，以抽籤定之。承受不動產之債權人，其應繳之價金超過其應受分配額者，執行法院應限期命其補繳差額後，發給權利移轉證書；逾期不繳者，再行拍賣。但有未中籤之債權人仍願按原定拍賣條件依法承受者，不在此限。第六十八條之二之規定，於前項再行拍賣準用之。
 
-* 94 債權人有二人以上願承受者，以抽籤定之。承受不動產之債權人，其應繳之價金超過其應受分配額者，執行法院應限期命其補繳差額後，發給權利移轉證書；逾期不繳者，強制執行。
+* 95 經二次減價拍賣而未拍定之不動產，債權人不願承受或依法不得承受時，應命強制管理；在管理中，得依債權人或債務人聲請，再減價或另估價拍賣。但強制管理顯有困難或無實益時，得逕行減價或另估價拍賣。前項拍賣，適用第九十一條至前條之規定。第一項再減價或另估價拍賣，仍未拍定，債權人亦不願承受時，執行法院應公告願買受該不動產者，得於六個月內依原定拍賣條件為應買之表示，執行法院得於詢問債權人及債務人意見後，許其買受。債權人復願為承受者亦同。前項情形，債權人亦得於六個月內聲請另行估價拍賣，如仍未拍定或由債權人承受，或債權人未於六個月內聲請另行估價拍賣者，視為撤回該不動產之執行。第九十四條第二項、第三項之規定，於本條第三項承買準用之。
 
-> 釋：一、明定不動產再行拍賣之程序，對應買人所出之最高價額，仍未達於拍賣最低額，而債權人依法得承受並願承受者，執行法院應依該次拍賣所定之最低價額，將不動產交債權人承受，並發給權利移轉證書，拍賣及再行拍賣之不動產，無人應買者，亦同，以便遵循，故修訂第一項。二、債權人有二人以上均願承受者，現行法未設規定，易滋紛擾，特明定以抽籤定之，以示公平，故增訂第二項。三、債權人承受不動產，其應繳之價金超過其應受分配額者，應如何處理，現行法未設規定。遇有此種情形，執行時無法律依據。特明定，由執行法院應限期命其補繳，逾期不繳者，強制執行之。以應實際需要，故增訂第三項。
-
-* 95 經二次減價拍賣而未拍定之不動產，債權人不願承受或依法不得承受時，應命強制管理；在管理中，得依債權人或債務人聲請，再減價或另估價拍賣。
-
-> 釋：不動產經拍賣或再行拍賣仍無人應買者，現行法規定債權人不願承受時，應命強制管理，延宕執行程序不能終結，應規定再定期再行拍賣，俾使執行程序早日終結。如經二次減價仍未拍定之不動產，債權人仍不願承受或依法不能承受時，再命強制管理。但在管理中依債權人或債務人之聲請，得再減價或另估價拍賣，以昭慎重，而杜流弊，故增訂第一、二項。
-
-* 96 供拍賣之數宗不動產，其中一宗或數宗之賣得價金，已足清償強制執行之債權額及債務人應負擔之費用時，其他部分應停止拍賣。前項情形，債務人得指定其應拍定不動產之部分。但建築物及其基地，不得指定單獨拍定。
-
-> 釋：一、第一項作文字修正。二、第二項增訂但書，規定建築物及基地，不得單獨拍定，以免減損其價值及影響不動產之利用。
+* 96 供拍賣之數宗不動產，其中一宗或數宗之賣得價金，已足清償強制執行之債權額及債務人應負擔之費用時，其他部分應停止拍賣。前項情形，債務人得指定其應拍賣不動產之部分。但建築物及其基地，不得指定單獨拍賣。
 
 * 97 拍賣之不動產，買受人繳足價金後，執行法院應發給權利移轉證書及其他書據。
 
-* 98 拍賣之不動產，買受人自領得執行法院所發給權利移轉證書之日起，取得該不動產所有權；債權人承受債務人之不動產者亦同。
+* 98 拍賣之不動產，買受人自領得執行法院所發給權利移轉證書之日起，取得該不動產所有權，債權人承受債務人之不動產者亦同。前項不動產原有之地上權、永佃權、地役權、典權及租賃關係隨同移轉。但發生於設定抵押權之後，並對抵押權有影響，經執行法院除去後拍賣者，不在此限。存於不動產上之抵押權及其他優先受償權，因拍賣而消滅。但抵押權所擔保之債權未定清償期或其清償期尚未屆至，而拍定人或承受抵押物之債權人聲明願在拍定或承受之抵押物價額範圍內清償債務，經抵押權人同意者，不在此限。
 
-* 99 債務人應交出之不動產，現為債務人占有或於查封後為第三人占有者，執行法院應解除其占有，點交於買受人或承受人；如有拒絕交出或其他情事時，得請警察協助。依前項規定點交後，原占有人復占有該不動產者，執行法院得依聲請再解除其占有後點交之。
+* 99 債務人應交出之不動產，現為債務人占有或於查封後為第三人占有者，執行法院應解除其占有，點交於買受人或承受人；如有拒絕交出或其他情事時，得請警察協助。第三人對其在查封前無權占有不爭執或其占有為前條第二項但書之情形者，前項規定亦適用之。依前二項規定點交後，原占有人復即占有該不動產者，執行法院得依聲請再解除其占有後點交之。前項執行程序，應徵執行費。
 
-> 釋：一、原條文所謂「債權人」係指依法承受該之動產之債權人而言爰修正為「承受人」。又點交於買受人之代理人，與點交與買受人無異。原條文所定之「代理人」，宜予刪除，並作文字上之修正。二、本條所謂「點交」，應以債務人有交付義務為前提。第三人於查封前占有者，依法應受保護。但於查封後始行占有者，則應予以點交。又點交時必須先行解除占有人之占有。特明定現為債務人占有或於查封後為第三人占有者，應解除其占有後點交之，以免爭執。三、增訂第二項，以維持執行之效果，藉免當事人再受訟累。
+* 100 房屋內或土地上之動產，除應與不動產同時強制執行外，應取去點交債務人或其代理人、家屬或受僱人。無前項之人接受點交時，應將動產暫付保管，向債務人為限期領取之通知，債務人逾限不領取時，得拍賣之而提存其價金，或為其他適當之處置。前二項規定，於前條之第三人適用之。
 
-* 100 房屋內或土地上之動產，除應與不動產同時強制執行外，應取去點交債務人或其代理人家屬或受僱人。無前項之人接受點交時，應將動產暫付保管，向債務人為限期領取之通知；債務人逾限不領取時，得拍賣之而提存其價金，或為其他適當之處置。
+* 101 債務人應交出書據而拒絕交出時，執行法院得將書據取交債權人或買受人，並得以公告宣示未交出之書據無效，另作證明書發給債權人或買受人。
 
-* 101 債務人應交出書據而拒絕交出時，執行法院得將該書據取交債權人或買受人，並得以公告宣示未交出之書據無效，另作證明書，發給債權人或買受人。
-
-* 102 共有物應有部分之拍賣，執行法院應通知他共有人。但無法通知時，不在此限。最低拍賣價額，就共有物全部估價，按債務人應有部分，比例定之。
+* 102 共有物應有部分第一次之拍賣，執行法院應通知他共有人。但無法通知時，不在此限。最低拍賣價額，就共有物全部估價，按債務人應有部分比例定之。
 
 * 103 已查封之不動產，執行法院得因債權人之聲請或依職權，命付強制管理。
 
-* 104 命付強制管理時，執行法院應禁止債務人干涉管理人事務及處分該不動產之收益，如收益應由第三人給付者，應命該第三人向管理人給付。
+* 104 命付強制管理時，執行法院應禁止債務人干涉管理人事務及處分該不動產之收益，如收益應由第三人給付者，應命該第三人向管理人給付。前項命第三人給付之命令，於送達於該第三人時發生效力。
 
-* 105 管理人由執行法院選任之。但債權人得推薦適當之人。執行法院，得命管理人提供擔保。
+* 105 管理人由執行法院選任之。但債權人得推薦適當之人。執行法院得命管理人提供擔保。管理人之報酬，由執行法院詢問債權人及債務人意見後定之。
 
-* 106 強制管理，以管理人一人為之。但執行法院認為必要時，得選任數人。管理人有數人時，應共同行使職權。但執行法院另以命令定其職務者，不在此限。
+* 106 強制管理，以管理人一人為之。但執行法院認為必要時，得選任數人。管理人有數人時，應共同行使職權。但執行法院另以命令定其職務者，不在此限。管理人共同行使職權時，第三人之意思表示，得僅向其中一人為之。
 
-* 107 執行處對於管理人，應指示關於管理上必要之事項，並監督其職務之進行。
+* 107 執行法院對於管理人，應指示關於管理上必要之事項，並監督其職務之進行。管理人將管理之不動產出租者，應以書面為之，並應經執行法院之許可。執行法院為前項許可時，應詢問債權人及債務人之意見。但無法通知或屆期不到場者，不在此限。
 
-* 108 管理人不勝任或管理不適當時，執行法院得撤退之。
+* 108 管理人不勝任或管理不適當時，執行法院得解除其職務或更換之。
 
-* 109 管理人因強制管理及收益，得占有不動產；遇有抗拒，得請執行處核辦，或請警察協助。
+* 109 管理人因強制管理及收益，得占有不動產，遇有抗拒，得請執行法院核辦，或請警察協助。
 
-* 110 管理人於不動產之收益，扣除管理費用及其他必需之支出後，應將餘額速交債權人。債權人對於前項所交數額有異議時，得向執行法院聲明之。
+* 110 管理人於不動產之收益，扣除管理費用及其他必需之支出後，應將餘額速交債權人；如有多數債權人參與分配，執行法院認為適當時，得指示其作成分配表分配之。債權人對於前項所交數額有異議時，得向執行法院聲明之；如債權人於前項分配表達到後三日內向管理人異議者，管理人應即報請執行法院分配之。第一項收益，執行法院得依債務人或其共同生活之親屬之聲請，酌留維持其生活所必需之數額，命管理人支付之。
 
 * 111 管理人應於每月或其業務終結後，繕具收支計算書，呈報執行法院，並送交債權人及債務人。債權人或債務人對於前項收支計算書有異議時，得於接得計算書後五日內，向執行法院聲明之。
 
-* 112 強制執行之債權額及債務人應負擔之費用，就不動產之收益已受清償時，執行法院應即終結強制管理。
+* 112 強制執行之債權額及債務人應負擔之費用，就不動產之收益已受清償時，執行法院應即終結強制管理。不動產之收益，扣除管理費用及其他必需之支出後，無賸餘之可能者，執行法院應撤銷強制管理程序。
 
-* 113 不動產之強制執行，除本章有規定外，準用關於動產執行之規定。
+* 113 不動產之強制執行，除本節有規定外，準用關於動產執行之規定。
 
-* 114 海商法所定之船舶，其強制執行，除本法另有規定外，準用關於不動產執行之規定；建造中之船舶亦同。對於船舶之強制執行，自運送人或船長發航準備完成時起，以迄航行完成時止，仍得為之。前項強制執行，除海商法第四條第一項但書之規定外，於保全程序之執行名義，不適用之。
+* 114 海商法所定之船舶，其強制執行，除本法另有規定外，準用關於不動產執行之規定；建造中之船舶亦同。對於船舶之強制執行，自運送人或船長發航準備完成時起，以迄航行完成時止，仍得為之。前項強制執行，除海商法第四條第一項但書之規定或船舶碰撞之損害賠償外，於保全程序之執行名義，不適用之。
 
-> 釋：一、原條文第一項第二項合併修正改列為第一項，並增加「除本法另有規定外」一語，以兼顧法律之配合。關於建造中之船舶，得依海商法第三十二條之規定，設定船舶抵押權，並依船舶登記法第五十三條之規定辦理登記。但其執行程序，究應適用動產執行之規定抑或準用不動產執行之規定，現行法未設明文，為應實際需要，故增訂之。二、海商法第四條規定，船舶之扣押、假扣押、自運送人或船長發航準備完成時起，以迄航行完成時止，不得為之。其立法原意旨在保護債權人、債務人以外當事人之權益，以避免國際貿易糾紛。此項規定，就本法言，在執行程序上頗有困難，而有使船舶無法查封情形，惟船舶價值甚鉅，一般所有人於船舶建造中或船舶營運中為融通資金，常有向金融機構借貸鉅款，並設定抵押權，如抵押債權人取得執行名義後，對於發航準備完成之船舶，不能實施查封拍賣，殊難保障擔保物權之效益。對於維護航業之發展與航運資金之靈活融通，影響至鉅。且一九五二年國際海船扣押公約早已規定：船舶雖已發航準備完成，仍得為強制執行之查封，英美二國之法制亦同。本法為保障擔保物權之效益及維護航業之發展與航運資金之靈活融通，特依國際公約及英美立法例，增訂：「對於船舶之強制執行，自運送人或船長發航準備完成時起，以迄航行完成時止，仍得為之」。以避免執行之困難，而保債權人之合法權益，故增訂第二項。
+* 114.1 船舶於查封後，應取去證明船舶國籍之文書，使其停泊於指定之處所，並通知航政主管機關。但經債權人同意，執行法院得因當事人或利害關係人之聲請，准許其航行。債務人或利害關係人，得以債權額及執行費用額或船舶之價額，提供擔保金額或相當物品，聲請撤銷船舶之查封。前項擔保，得由保險人或經營保證業務之銀行出具擔保書代之。擔保書應載明債務人不履行義務時，由其負責清償或併賠償一定之金額。依前二項規定撤銷船舶之查封時，得就該項擔保續行執行。如擔保人不履行義務時，執行法院得因債權人之聲請，逕向擔保人為強制執行。第二項、第三項係就債權額及執行費用額提供擔保者，於擔保提出後，他債權人對該擔保不得再聲明參與分配。第一項但書情形，不影響海商法第二十四條第一項第一款之優先受償權。
 
-* 114.1 船舶於查封後，應使其停泊於指定之處所，並通知航政主管機關。但經債權人同意，執行法院認為適當時，得因當事人或利害關係人之聲請，准許其航行。債務人或利害關係人，得以債權額及執行費用額或船舶之價額，提供擔保金額或相當物品，聲請撤銷船舶之查封。依前項規定撤銷船舶之查封時，得就該項擔保續行執行。第一項但書情形，不影響海商法第二十四條第一項第一款之優先受償權。
-
-> 釋：一、本條為新增條文。為兼顧航運之發展及託運人之利益，查封後之船舶，宜設經債權人同意得准許航行及債務人或利害關係人提供擔保，得撤銷查封之制度，以資兼顧債務人之權益。故增訂第一、二、三項。二、為使海商法第二十四條第一項第一款債權人優先受償，不受船舶准許航行之影響，而免執行時之紛爭，爰增訂第四項明定之。
-
-* 114.2 前條准許航行之船舶，在未返回指定之處所停泊者，不得拍賣。但船舶現停泊於其他法院轄區者，得囑託該法院拍賣或為其他執行行為。拍賣船舶之公告，除記載第八十一條第二項第二款至第五款事項外，並應載明船名、船種、總噸位、船舶國籍、船籍港、停泊港及其他事項，揭示於執行法院、船舶所在地及船籍港所在地航政主管機關牌示處。船舶得經應買人、債權人及債務人同意變賣之。並於買受人繳足價金後，由執行法院發給權利移轉證書。
-
-> 釋：一、准許航行之船舶，行蹤不定，不宜逕行拍賣，以免發生點交之困難。又船舶經查封後，不在當時指定之處所停泊者，為便於執行，宜許原執行法院囑託船舶現停泊地之法院拍賣或為其他執行行為。爰增訂第一項，以利實務。二、第二項明定拍賣船舶之公告，除記載第八十一條第二款至第五款事項外，並應載明船名、船種、總噸位、船舶國籍、船籍港、碇泊港及其他事項，揭示於執行法院、船舶所在地及船籍港所在地航政主管機關牌示處。三、為使船舶能迅速變售，以減少損失及不必要之費用起見，明定買受人繳足價金後，執行法院即發給權利移轉證書，俾使買受人即可利用該買受之船舶，故增訂第三項。
+* 114.2 依前條第一項但書准許航行之船舶，在未返回指定之處所停泊者，不得拍賣。但船舶現停泊於他法院轄區者，得囑託該法院拍賣或為其他執行行為。拍賣船舶之公告，除記載第八十一條第二項第二款至第五款事項外，並應載明船名、船種、總噸位、船舶國籍、船籍港、停泊港及其他事項，揭示於執行法院、船舶所在地及船籍港所在地航政主管機關牌示處。船舶得經應買人、債權人及債務人同意變賣之，並於買受人繳足價金後，由執行法院發給權利移轉證書。前項變賣，其賣得價金足以清償債權人之債權者，無須得其同意。
 
 * 114.3 外國船舶經中華民國法院拍賣者，關於船舶之優先權及抵押權，依船籍國法。當事人對優先權與抵押權之存在所擔保之債權額或優先次序有爭議者，應由主張有優先權或抵押權之人，訴請執行法院裁判；在裁判確定前，其應受償之金額，應予提存。
 
-> 釋：一、外國船舶停泊於我國港口或航行於我國領域內者，依屬地主義之原則，為我法權所及，我國法院得予強制執行。二、但關於船舶之優先權及抵押權，參照涉外民事法律適用法第十條第四項之規定及國際私法上相互承認其效力，准其享有優先受償之權利。惟優先權係不經登記之權力，而外國官署所為抵押權登記，屬外國政之公法行為，執行債權人對其存在，及其所擔保之債權額或優先次序有爭議者，就本法第四十三條及民事訴訟法第四百零二條之意旨觀之，該優先權與抵押權之效力，並非當然及於我國領域，故增訂本條，以杜糾紛。
-
 * 114.4 民用航空法所定航空器之強制執行，除本法另有規定外，準用關於船舶執行之規定。查封之航空器，得交由當地民用航空主管機關保管之。航空器第一次拍賣期日，距公告之日，不得少於一個月。拍賣航空器之公告，除記載第八十一條第二項第二款至第五款事項外，並應載明航空器所在地、國籍、標誌、登記號碼、型式及其他事項。前項公告，執行法院應通知民用航空主管機關登記之債權人。但無法通知者，不在此限。
 
-> 釋：一、查人類使用航空器，因航空事業之發展而日漸增加，對其如何強制執行，現行法並無明文，自有增訂之必要。按航空器在實體法上，雖有動產性。但其價值甚高，且民用航空法第十八條規定航空器得為抵押權之標的，同法第十九條規定其所有權之移轉，抵押權之設定及租賃，非經登記，不得對抗第三人，強制執行法上，宜視同不動產，比照對於船舶執行之規定處理。至所謂航空器者，其範圍如何從民用航空法之規定。二、明定查封航空器之保管機關，以利保管，故增訂第二項。三、按一九四八年國際航空器權利公約第七條規定：「航空器之拍賣時間，應在一個月前公告之，應通知經登記之債權人」。為配合此項國際公約之規定，故增訂第三項。四、航空器之性能與船舶有別，拍賣公告應記載事項，應另作規定，以利實用，故增訂第四項。五、第五項增訂理由同第三項。
+* 115 就債務人對於第三人之金錢債權為執行時，執行法院應發扣押命令禁止債務人收取或為其他處分，並禁止第三人向債務人清償。前項情形，執行法院得詢問債權人意見，以命令許債權人收取，或將該債權移轉於債權人。如認為適當時，得命第三人向執行法院支付轉給債權人。金錢債權因附條件、期限、對待給付或其他事由，致難依前項之規定辦理者，執行法院得依聲請，準用對於動產執行之規定拍賣或變賣之。金錢債權附有已登記之擔保物權者，執行法院依前三項為強制執行時，應即通知該管登記機關登記其事由。
 
-* 115 就債務人對於第三人之金錢債權為執行時，執行法院應依職權禁止債務人收取或為其他處分，並禁止第三人向債務人清償。前項情形，執行法院得以命令許債權人收取，或將該債權移轉於債權人。如認為適當時，得命第三人向執行法院支付轉給債權人。金錢債權因附條件或期限，致難依前項之規定辦理者，執行法院得依聲請，準用對於動產執行之規定拍賣或變賣之。
+* 115.1 對於薪資或其他繼續性給付之債權所為強制執行，於債權人之債權額及強制執行費用額之範圍內，其效力及於扣押後應受及增加之給付。
 
-> 釋：金錢債權因附條件或期限，致執行法院難依收取、移轉或支付轉給命令為執行者，如何處理，現行法並無明文。爰增訂第三項，以應實際需要。
+* 115.2 第三人於執行法院發第一百十五條第二項命令前，得將對債務人之金錢債權全額或扣押部分提存於清償地之提存所。第三人於依執行法院許債權人收取或向執行法院支付轉給債權人之命令辦理前，又收受扣押命令，而其扣押之金額超過債務人之金錢債權未受扣押部分者，應即將該債權之全額支付扣押在先之執行法院。第三人已為提存或支付時，應向執行法院陳明其事由。
 
 * 116 就債務人基於債權或物權，得請求第三人交付或移轉動產或不動產之權利為執行時，執行法院除以命令禁止債務人處分，並禁止第三人交付或移轉外，如認為適當時，得命第三人將該動產或不動產交與執行法院，依關於動產或不動產執行之規定執行之。基於確定判決，或依民事訴訟法成立之和解、調解，第三人應移轉或設定不動產物權於債務人者，執行法院得因債權人之聲請，以債務人之費用，通知登記機關登記為債務人所有後執行之。
 
-> 釋：就債務人基於確定判決或訴訟上之和解、調解，得請求第三人移轉或設定不動產物權為執行時，債務人如不聲請登記機關辦理物權登記，現行法僅扣押及拍賣其權利，不得拍賣該不動產之物權，致拍賣時無人願意應買，或僅能以低價拍賣，對債權人及債務人之利益損害至鉅，爰增訂第二項，以應需要。
+* 116.1 就債務人基於債權或物權，得請求第三人交付或移轉船舶或航空器之權利為執行時，準用前條之規定辦理，並依關於船舶或航空器執行之規定執行之。
 
-* 117 對於前二章及前二條所定以外之財產權執行時，準用前二條之規定，執行法院並得酌量情形，命令讓與或管理，而以讓與價金或管理之收益清償債權人。
+* 117 對於前三節及第一百十五條至前條所定以外之財產權執行時，準用第一百十五條至前條之規定，執行法院並得酌量情形，命令讓與或管理，而以讓與價金或管理之收益清償債權人。
 
-* 118 前三條之命令，應送達於債務人，有第三人者，並應送達於第三人，已為送達後，應通知債權人。
+* 118 第一百十五條、第一百十六條、第一百十六條之一及前條之命令，應送達於債務人及第三人，已為送達後，應通知債權人。前項命令，送達於第三人時發生效力，無第三人者，送達於債務人時發生效力。但送達前已為扣押登記者，於登記時發生效力。
 
-* 119 第三人不承認債務人之債權或其他財產權之存在，或於數額有爭議時，應於接受法院命令後十日內，提出書狀，向執行法院聲明異議。第三人不於前項期間內聲明異議，亦未依執行法院命令，將金錢支付債權人，或將金錢、動產或不動產支付或交付執行法院時，執行法院得因債權人之聲請，逕向該第三人為強制執行。對於前項執行，第三人得以第一項規定之事由，提起異議之訴。第十八條第二項及第三項之規定，於前項訴訟準用之。
+* 119 第三人不承認債務人之債權或其他財產權之存在，或於數額有爭議或有其他得對抗債務人請求之事由時，應於接受執行法院命令後十日內，提出書狀，向執行法院聲明異議。第三人不於前項期間內聲明異議，亦未依執行法院命令，將金錢支付債權人，或將金錢、動產或不動產支付或交付執行法院時，執行法院得因債權人之聲請，逕向該第三人為強制執行。對於前項執行，第三人得以第一項規定之事由，提起異議之訴。第十八條第二項之規定，於前項訴訟準用之。
 
-> 釋：一、現行法第一百十五條第二項規定命第三人向執行法院支付金錢，而不支付，又不依規定聲明異議者，仍須債權人對於該第三人取得執行名義，始得對該第三人為強制執行（見最高法院廿二年抗字第一一六七號判例）。非特影響執行效果，且足助長該第三人輕視執行命令之心理。爰增訂第二項，以應需要。二、新增第三項，其目的在保護第三人之權益。三、第三人不依規定異議者，雖可對之執行，惟為保障第三人之利益，特許第三人訴請確認其債務不存在，並得停止執行。爰增訂第四項。
+* 120 第三人依前條第一項規定聲明異議者，執行法院應通知債權人。債權人對於第三人之聲明異議認為不實時，得於收受前項通知後十日內向管轄法院提起訴訟，並應向執行法院為起訴之證明及將訴訟告知債務人。債權人未於前項規定期間內為起訴之證明者，執行法院得依第三人之聲請，撤銷所發執行命令。
 
-* 120 債權人對於前條第三人之聲明，認為不實時，得向管轄法院提起訴訟，並通知債務人。
+* 121 債務人對於第三人之債權或其他財產權持有書據，執行法院命其交出而拒絕者，得將該書據取出，並得以公告宣示未交出之書據無效，另作證明書發給債權人。
 
-* 121 債務人對於第三人之債權或其他財產權持有書據，執行法院命其交出而拒絕者，得將該書據取出，並得以公告宣示未交出之書據無效，另作證明書，發給債權人。
+* 122 債務人對於第三人之債權，係維持債務人及其共同生活之親屬生活所必需者，不得為強制執行。
 
-* 122 債務人對於第三人之債權，係維持債務人及其家屬生活所必需者，不得為強制執行。
+* 122.1 關於金錢請求權之強制執行，債務人為中央或地方機關或依法為公法人者，適用本節之規定。但債務人為金融機構或其他無關人民生活必需之公用事業者，不在此限。第二十條至第二十五條之規定，於前項執行不適用之。
 
-* 123 執行名義，係命債務人交付一定之動產而不交付者，執行法院得將該動產取交債權人。
+* 122.2 執行法院應對前條債務人先發執行命令，促其於三十日內依照執行名義自動履行或將金錢支付執行法院轉給債權人。債務人應給付之金錢，列有預算項目而不依前項規定辦理者，執行法院得適用第一百十五條第一項、第二項規定，逕向該管公庫執行之。
 
-* 124 執行名義係命債務人交出不動產而不交出者，執行法院得解除債務人之占有，使歸債權人占有。如債務人於解除占有後，復占有該不動產者，執行法院得依聲請續為執行。執行名義係命債務人交出船舶或在建造中之船舶，而不交出者，準用前項之規定。
+* 122.3 債務人管有之公用財產，為其推行公務所必需或其移轉違反公共利益者，債權人不得為強制執行。關於前項情形，執行法院有疑問時，應詢問債務人之意見或為其他必要之調查。
 
-> 釋：一、第一項增訂後段，以維執行之效果，並防止債務人取巧，俾免債權人再受訟累。二、為配合本草案第一百十四條第二項之規定，特增訂第二項，以應需要。
+* 122.4 債務人管有之非公用財產及不屬於前條第一項之公用財產，仍得為強制執行，不受國有財產法、土地法及其他法令有關處分規定之限制。
+
+* 123 執行名義係命債務人交付一定之動產而不交付者，執行法院得將該動產取交債權人。債務人應交付之物為書據、印章或其他相類之憑證而依前項規定執行無效果者，得準用第一百二十一條、第一百二十八條第一項之規定強制執行之。
+
+* 124 執行名義係命債務人交出不動產而不交出者，執行法院得解除債務人之占有，使歸債權人占有。如債務人於解除占有後，復即占有該不動產者，執行法院得依聲請再為執行。前項再為執行，應徵執行費。執行名義係命債務人交出船舶、航空器或在建造中之船舶而不交出者，準用前二項規定。
 
 * 125 關於動產、不動產執行之規定，於前二條情形準用之。
 
-* 126 第一百二十三條及第一百二十四條應交付之動產或不動產為第三人占有者，執行法院應以命令將債務人對於第三人得請求交付之權利，移轉於債權人。
+* 126 第一百二十三條及第一百二十四條應交付之動產、不動產或船舶及航空器為第三人占有者，執行法院應以命令將債務人對於第三人得請求交付之權利移轉於債權人。
 
-* 127 依執行名義，債務人應為一定行為而不為者，執行法院得以債務人之費用，命第三人代為履行。前項費用，由執行法院酌定數額，命債務人預行支付，必要時，並得命鑑定人鑑定其數額。
+* 127 依執行名義，債務人應為一定行為而不為者，執行法院得以債務人之費用，命第三人代為履行。前項費用，由執行法院酌定數額，命債務人預行支付或命債權人代為預納，必要時，並得命鑑定人鑑定其數額。
 
-* 128 依執行名義，債務人應為一定之行為，而其行為非他人所能代為履行者，債務人不為履行時，執行法院得定債務履行之期間及逾期不履行應賠償損害之數額，向債務人宣示或處或併處債務人以一千元以下之過怠金。前項規定，於夫妻同居之判決不適用之。執行名義，係命債務人交出子女或被誘人者，除適用第一項規定外，得用直接強制方法，將該子女或被誘人取交債權人。
+* 128 依執行名義，債務人應為一定之行為，而其行為非他人所能代為履行者，債務人不為履行時，執行法院得定債務人履行之期間。債務人不履行時，得拘提、管收之或處新臺幣三萬元以上三十萬元以下之怠金。其續經定期履行而仍不履行者，得再處怠金。前項規定，於夫妻同居之判決不適用之。執行名義，係命債務人交出子女或被誘人者，除適用第一項規定外，得用直接強制方法，將該子女或被誘人取交債權人。
 
-* 129 執行名義係命債務人容忍他人之行為，或禁止債務人為一定之行為者，債務人不履行時，執行法院得拘提、管收之，或處以一千元以下之過怠金；必要時，並得因債權人之聲請，以債務人之費用，除去其行為之結果。前項不行為債務，執行完畢後，債務人復行違反時，執行法院得依聲請續為執行。第一項管收，準用第二十四條至第二十六條之規定。
+* 129 執行名義係命債務人容忍他人之行為，或禁止債務人為一定之行為者，債務人不履行時，執行法院得拘提、管收之或處新臺幣三萬元以上三十萬元以下之怠金。其仍不履行時，亦同。前項情形，於必要時，並得因債權人之聲請，以債務人之費用，除去其行為之結果。依前項規定執行後，債務人復行違反時，執行法院得依聲請再為執行。前項再為執行，應徵執行費。
 
-> 釋：一、第一項末段處過怠金時，並得因債權人聲請，命債務人提出相當之擔保，係屬贅文，予以刪除。二、為求徹底達成執行之目的，特於本條第一項之末增設除去行為結果之規定。
+* 129.1 債務人應為第一百二十八條第一項及前條第一項之行為或不行為者，執行法院得通知有關機關為適當之協助。
 
-* 130 為執行名義之判決，係命債務人為一定之意思表示而不表示者，視為自判決確定時，已為其意思表示。但意思表示有待於對待給付者，自法院就已為對待給付或提出相當擔保，給予證明書時，視為已為其意思表示。
+* 130 命債務人為一定之意思表示之判決確定或其他與確定判決有同一效力之執行名義成立者，視為自其確定或成立時，債務人已為意思表示。前項意思表示有待於對待給付者，於債權人已為提存或執行法院就債權人已為對待給付給予證明書時，視為債務人已為意思表示。公證人就債權人已為對待給付予以公證時，亦同。
 
-* 131 關於繼承財產或共有物分割之裁判，執行法院得將各繼承人或共有人分得部分點交之，其應以金錢補償者，並得對於補償義務人之財產執行。執行名義係變賣繼承財產或共有物，以價金分配於各繼承人或各共有人者，執行法院得予以拍賣，並分配其價金；其拍賣程序，準用關於動產或不動產之規定。
+* 131 關於繼承財產或共有物分割之裁判，執行法院得將各繼承人或共有人分得部分點交之；其應以金錢補償者，並得對於補償義務人之財產執行。執行名義係變賣繼承財產或共有物，以價金分配於各繼承人或各共有人者，執行法院得予以拍賣，並分配其價金，其拍賣程序，準用關於動產或不動產之規定。
 
-> 釋：一、為便民及避免當事人另行訴訟起見，特配合民法第八二四條第二項第三項規定，將本條第一項第二項修正，以求明確。二、共有物分割之判決，雖屬形成判決，但此項判決，尚具有交付他共有人分得部分之性質，自可據以點交，爰於第一項併予規定。三、執行名義為變賣繼承財產或共有物，以價金分配於各繼承人或各共有人時，其變賣方法如何，應予明定，爰修正第二項，以應實際需要。
+* 132 假扣押或假處分之執行，應於假扣押或假處分之裁定送達同時或送達前為之。前項送達前之執行，於執行後不能送達，債權人又未聲請公示送達者，應撤銷其執行。其公示送達之聲請被駁回確定者亦同。債權人收受假扣押或假處分裁定後已逾三十日者，不得聲請執行。
 
-* 132 假扣押或假處分之執行，應於假扣押或假處分之裁定送達同時或送達前為之。前項送達前之執行，於執行後不能送達，債權人又未聲請公示送達者，應撤銷其執行；其公示送達之聲請被駁回確定者亦同。
+* 132.1 假扣押、假處分或定暫時狀態之處分裁定經廢棄或變更已確定者，於其廢棄或變更之範圍內，執行法院得依聲請撤銷其已實施之執行處分。
 
-> 釋：一、債務人送達處所不明，或於外國為送達，或因其他情事不能送達者，原應依民事訴訟法之規定公示送達或為囑託送達。惟債務人常利用此機會隱匿或處分其財產。爰修正原條文為第一項，並新增第二項，以應實際需要。二、執行後不能送達者，明定處理之方法，以資遵循。
+* 132.2 債權人依民法第一百五十一條規定拘束債務人自由，並聲請法院處理，經法院命為假扣押或假處分者，執行法院得依本法有關管收之規定，管收債務人或為其他限制自由之處分。
 
-* 133 因執行假扣押收取之金錢及依分配程序應分配於假扣押債權人之金額，應提存之。
+* 133 因執行假扣押收取之金錢，及依分配程序應分配於假扣押債權人之金額，應提存之。
 
-* 134 假扣押之動產，如有價格減少之虞或保管需費過多時，執行法院得因債權人或債務人之聲請或依職權定期拍賣，提存其賣得金。
+* 134 假扣押之動產，如有價格減少之虞或保管需費過多時，執行法院得因債權人或債務人之聲請或依職權，定期拍賣，提存其賣得金。
 
-* 135 對於債權或其他財產權執行假扣押者，執行法院應準用第一百十五條及第一百十六條之規定，分別發禁止處分清償之命令。
+* 135 對於債權或其他財產權執行假扣押者，執行法院應分別發禁止處分清償之命令，並準用對於其他財產權執行之規定。
 
-* 136 假扣押之執行，除本章有規定外，準用關於動產、不動產執行之規定。
+* 136 假扣押之執行，除本章有規定外，準用關於動產、不動產、船舶及航空器執行之規定。
 
-* 137 假處分裁定，應選任管理人管理係爭物者，於執行時，法院應使管理人占有其物。
+* 137 假處分裁定，應選任管理人管理系爭物者，於執行時，執行法院應使管理人占有其物。
 
-* 138 假處分裁定，係命令或禁止債務人為一定行為者，法院應將該裁定送達於債務人。
+* 138 假處分裁定，係命令或禁止債務人為一定行為者，執行法院應將該裁定送達於債務人。
 
-* 139 假處分裁定，係禁止債務人設定移轉、或變更不動產上之權利者，法院應將該裁定揭示。
+* 139 假處分裁定，係禁止債務人設定、移轉或變更不動產上之權利者，執行法院應將該裁定揭示。
 
-* 140 假處分之執行，除前三條規定外，準用關於假扣押及行為、不行為請求權執行之規定。
+* 140 假處分之執行，除前三條規定外，準用關於假扣押、金錢請求權及行為、不行為請求權執行之規定。
 
-> 釋：依民事訴訟法第五百三十五條第二項規定，假處分得命令或禁止債務人為一定行為，現行法就此未定執行方法，故予補充。俾資依循。
+* 141 本法施行前，已開始強制執行之事件，視其進行程度，依本法所定程序終結之。其已進行之部分，不失其效力。
 
-* 141 本法施行前，已開始強制執行之事件，視其進行程度，依本法所定之程序終結之，其已進行之部分，不失其效力。
-
-* 142 本法自公布日施行。
+* 142 本法自公布日起施行。
 
