--- a/行政-經濟及能源/專利法.md
+++ b/行政-經濟及能源/專利法.md
@@ -38,7 +38,9 @@
 
 * 20 凡可供產業上利用之發明，無下列情事之一者，得依本法申請取得發明專利：一、申請前已見於刊物或已公開使用者。但因研究、實驗而發表或使用，於發表或使用之日起六個月內申請專利者，不在此限。二、有相同之發明或新型申請在先並經核准專利者。三、申請前已陳列於展覽會者。但陳列於政府主辦或認可之展覽會，於展覽之日起六個月內申請專利者，不在此限。發明係運用申請前既有之技術或知識，而為熟習該項技術者所能輕易完成時，雖無前項所列情事，仍不得依本法申請取得發明專利。
 
-* 21 下列各款不予發明專利：一、動、植物新品種，但植物新品種育成方法不在此限。二、人體或動物疾病之診斷、治療或手術方法。三、科學原理或數學方法。四、遊戲及運動之規則或方法。五、其他必須藉助於人類推理力、記憶力始能執行之方法或計畫。六、發明妨害公共秩序、善良風俗或衛生者。有關微生物新品種得予發明專利，應於中華民國加入關稅暨貿易總協定，且該協定與貿易有關之智慧財產權協議書生效滿一年後施行之。但本國人及與中華民國有微生物新品種互惠保護條約、協定之國家之國民不在此限。
+* 21 下列各款不予發明專利：一、動、植物新品種。但植物新品種育成方法不在此限。二、人體或動物疾病之診斷、治療或手術方法。三、科學原理或數學方法。四、遊戲及運動之規則或方法。五、其他必須藉助於人類推理力、記憶力始能執行之方法或計畫。六、發明妨害公共秩序、善良風俗或衛生者。
+
+> 釋：一、第一項未修正。二、現行第二項就有關微生物新品種專利，除本國人及與我國有微生物新品種互惠保護條約、協定之國家之國民外，應於我國加入世界貿易組織，且智慧財產權協定生效滿一年後施行之規定，顯與國民待遇原則及最惠國待遇原則相違，爰將現行第二項刪除。
 
 * 22 申請發明專利，申專利申請權人備具申請書、說明書、必要圖式及宣誓書，向專利專責機關申請之。申請權人為雇用人、受讓人或繼承人時，應敘明發明人姓名，並附具僱傭、受讓或繼承證明文件。第一項之說明書，除應載明申請專利範圍外，並應載明有關之先前技術、發明之目的、技術內容、特點及功效，使熟習該項技術者能瞭解其內容並可據以實施。前項申請專利範圍，應具體指明申請專利之標的、技術內容及特點。說明書、圖式及申請專利範圍之敘述方式，於施行細則定之。
 
@@ -102,7 +104,9 @@
 
 * 50 申請專利之發明，經審定公告後暫准發生專利權之效力。經審定公告之發明審查確定後，自公告之日起給予發明專利權並發證書。發明專利權期限自申請日起算二十年屆滿。第一項暫准發生專利權之效力，因申請不合程序致申請行為不受理，或因異議成立不予專利審查確定，視為自始即不存在。
 
-* 51 醫藥品、農藥品或其製造方法發明專利權之實施，依其他法律規定，應取得許可證，而於專利案審定公告後需時二年以上者，專利權人得申請延長專利二年至五年，並以一次為限。但核准延長之期間，不得超過向中央目的事業主管機關取得許可證所需期間，取得許可證期間超過五年者，延長期間仍以五年為限。前項申請應備具申請書，附具證明文件，於取得第一次許可證之日起三個月內，向專利專責機關提出。但在專利權期間屆滿前六個月內，不得為之。專利專責機關就前項申請案，有關延長期間之核定，應考慮對國民健康之影響，並會同中央目的事業主管機關訂定核定辦法。第一項延長專利之申請，專利權人為外國人者，以其所屬之國家與中華民國訂有雙邊互惠條約或協定者為限。
+* 51 醫藥品、農藥品或其製造方法發明專利權之實施，依其他法律規定，應取得許可證，而於專利案審定公告後需時二年以上者，專利權人得申請延長專利二年至五年，並以一次為限。但核准延長之期間，不得超過向中央目的事業主管機關取得許可證所需期間，取得許可證期間超過五年者，延長期間仍以五年為限。前項申請應備具申請書，附具證明文件，於取得第一次許可證之日起三個月內，向專利專責機關提出。但在專利權期間屆滿前六個月內，不得為之。專利專責機關就前項申請案，有關延長期間之核定，應考慮對國民健康之影響，並會同中央目的事業主管機關訂定核定辦法。
+
+> 釋：一、第一項至第三項未修正。二、對於由外國籍之專利權人提出延長專利之申請，現行第四項明定以其所屬國與我國訂有雙邊互惠條約或協定者為限，與貿易有關智慧財產權協定第三條及第四條國民待遇及最惠國待遇之規定意旨不符，爰將現行第四項刪除。
 
 * 52 專利專責機關對於發明專利權延長申請案，應指定審查委員審查，作成審定書送達專利權人或其代理人。專利權人對前項之審定有不服者，得於審定書送達之次日起三十日內，依法提起行政救濟。
 
@@ -112,9 +116,13 @@
 
 * 55 專利專責機關認有前條第一項各款情事之一者，得依職權撤銷延長之發明專利權期間。專利權延長經撤銷確定者，原核准延長之期間，視為自始不存在。但因違反前條第一項第三款、第六款規定，經撤銷確定者，就其超過之期間，視為未延長。
 
-* 56 物品專利權人，除本法另有規定者外，專有排除他人未經其同意而製造、販賣、使用或為上述目的而進口該物品之權。方法專利權人，除本法另有規定者外，專有排除他人未經其同意而使用該方法及使用、販賣或為上述目的而進口該方法直接製成物品之權。發明專利權範圍，以說明書所載之申請專利範圍為準。必要時，得審酌說明書及圖式。本條有關進口權部分之規定，於中華民國加入關稅暨貿易總協定，且該協定之與貿易有關之智慧財產權協議書生效滿一年後施行之。但本國人及與中華民國有互惠保護條約、協定之國家之國民，不在此限。
+* 56 物品專利權人，除本法另有規定者外，專有排除他人未經其同意而製造、販賣、使用或為上述目的而進口該物品之權。方法專利權人，除本法另有規定者外，專有排除他人未經其同意而使用該方法及使用、販賣或為上述目的而進口該方法直接製成物品之權。發明專利權範圍，以說明書所載之申請專利範圍為準。必要時，得審酌說明書及圖式。
 
-* 57 發明專利權之效力不及於下列各款情事：一、為研究、教學或試驗實施其發明，而無營利行為者。二、申請前已在國內使用，或已完成必須之準備者。但在申請前六個月內，於專利申請人處得知其製造方法，並經專利申請人聲明保留其專利權者，不在此限。三、申請前已存在國內之物品。四、僅由國境經過之交通工具或其裝置。五、非專利申請權人所得專利權，以專利權人舉發而撤銷時，其被授權人在舉發前以善意在國內使用或已完成必須之準備者。六、專利權人所製造或經其同意製造之專利物品販賣後，使用或再販賣該物品者。上述製造、販賣不以國內為限。前項第二款及第五款之使用人，限於在其原有事業內繼續利用；第六款得為販賣之區域，由法院依事實認定之。
+> 釋：一、第一項至第三項未修正。二、對於由外國籍之專利權人主長進口權之規定，現行第四項明定以其所屬國與我國訂有雙邊互惠條約或協定者為限，與貿易有關智慧財產權協定第三條及第四條國民待遇及最惠國待遇之規定意旨不符，爰將現行第四項刪除。
+
+* 57 發明專利權之效力不及於下列各款情事：一、為研究、教學或試驗實施其發明，而無營利行為者。二、申請前已在國內使用或已完成必須之準備者。但在申請前六個月內，於專利申請人處得知其製造方法，並經專利申請人聲明保留其專利權者，不在此限。三、申請前已存在國內之物品。四、僅由國境經過之交通工具或其裝置。五、非專利申請權人所得專利權，以專利權人舉發而撤銷時，其被授權人在舉發前以善意在國內使用或已完成必須之準備者。六、專利權人所製造或經其同意製造之專利物品販賣後，使用或再販賣該物品者。上述製造、販賣不以國內為限。前項第二款及第五款之使用人，限於在其原有事業內繼續利用；第六款得為販賣之區域，由法院依事實認定之。第一項第五款之被授權人，因該專利權經舉發而撤銷之後，仍實施時，於收到專利權人書面通知之日起，應支付專利權人合理之權利金。
+
+> 釋：一、第一項及第二項未修正。二、增訂第三項。蓋非專利申請權人所得專利權，因舉發而撤銷時，其被授權人在舉發前在國內使用或已完成必須準備之善意行為，依第一項第五款雖為專利權效力所不及，惟基於與貿易有關之智慧財產權協定第三十條保護專利權人權益之精神，並參酌日、韓等國之相關法例，被授權人於專利權人書面通知後，仍應支付合理之權利金，否則應負債務不履行之責，爰予明定。
 
 * 58 混合兩種以上醫藥品而製造之醫藥品或方法，其專利權效力不及於醫師之處方或依處方調劑之醫藥品。
 
@@ -156,15 +164,23 @@
 
 * 77 專利專責機關應備置專利權簿，記載核准專利發明之名稱、專利期限、專利權人、代理人姓名、住址及其他有關專利之權利與法令所定之一切事項。前項專利權簿，應供人民閱覽、抄錄、攝影或影印。
 
-* 78 為因應國家緊急情況或增進公益之非營利使用或申請人曾以合理之商業條件在相當期間內仍不能協議授權時，專利專責機關得依申請，特許該申請人實施專利權。其實施應以供應國內市場需要為主。專利權人有不公平競爭之情事經法院判決或行政院公平交易委員會處分者，雖無前項之情形，專利專責機關亦得依申請，特許該申請人實施專利權。專利專責機關接到特許實施申請書後，應將申請書副本送達專利權人，限期三個月內答辯；逾期不答辯者，得逕行處理。特許實施權，不妨礙他人就同一發明專利權再取得實施權。特許實施權人應給與專利權人適當之補償金，有爭執時，由專利專責機關核定之。特許實施權，除應與特許實施有關之營業一併移轉外，不得轉讓、授權或設定質權。第一項或第二項所列舉特許實施之原因消滅時，專利專責機關得依申請終止特許實施。
+* 78 為因應國家緊急情況或增進公益之非營利使用或申請人曾以合理之商業條件在相當期間內仍不能協議授權時，專利專責機關得依申請，特許該申請人實施專利權；其實施應以供應國內市場需要為主。但就半導體技術專利申請特許實施者，以增進公益之非營利使用為限。專利權人有不公平競爭之情事經法院判決或行政院公平交易委員會處分確定者，雖無前項之情形，專利專責機關亦得依申請，特許該申請人實施專利權。專利專責機關接到特許實施申請書後，應將申請書副本送達專利權人，限期三個月內答辯；逾期不答辯者，得逕行處理。特許實施權，不妨礙他人就同一發明專利權再取得實施權。特許實施權人應給與專利權人適當之補償金，有爭執時，由專利專責機關核定之。特許實施權，應與特許實施有關之營業一併轉讓、信託、繼承、授權或設定質權。特許實施權之原因消滅時，專利專責機關得依申請終止特許實施。
 
-* 79 依前條第一項為增進公益非營利之使用，或第二項之規定而取得特許實施權人，違反特許實施之目的時，專利專責機關得依專利權人之申請或依職權撤銷其特許實施權。
+> 釋：一、就有關半導體技術專利之特許實施，與貿易有關之智慧財產權協定明文限定於增進公益之非營利使用或有不公平競爭之情事，爰增訂第一項但書之規定，並納入第二項規範之範疇。二、第二項作文字修正。三、第三項至第五項未修正。四、特許實施權應隨同有關營業一併變動，繼承依民法之規定，亦可生權利變動之效果，並配合信託法，增列「信託」規定，爰將第六項酌作文字修正。五、第七項作文字修正。
 
-* 80 第二十九條再發明專利權人未經原專利權人同意，不得實施其發明。製造方法專利權人依其製造方法製成之物品為他人專利者，未經該他人同意，不得實施其發明。前二項再發明專利權人與原發明專利權人，或製造方法專利權人與物品專利權人，得協議交互授權實施，協議不成時，得依第七十八條第一項申請特許實施。
+* 79 依前條規定取得特許實施權人，違反特許實施之目的時，專利專責機關得依專利權人之申請或依職權撤銷其特許實施權。
+
+> 釋：為貫徹與貿易有關之智慧財產權協定之意旨，爰予修正，使不限於公益使用及不公平競爭之特許實施目的違反時，始得撤銷其特許實施權。
+
+* 80 第二十九條再發明專利權人未經原專利權人同意，不得實施其發明。製造方法專利權人依其製造方法製成之物品為他人專利者，未經該他人同意，不得實施其發明。第二項再發明專利權人與原發明專利權人或製造方法專利權人與物品專利權人，得協議交互授權實施。前項協議不成時，再發明專利權人與原發明專利權人或製造方法專利權人與物品專利權人得依第七十八條申請特許實施。但再發明或製造方法發明所表現之技術，須較原發明或物品發明具相當經濟意義之重要技術改良者，再發明或製造方法專利權人始得申請特許實施。再發明專利權人或製造方法專利權人取得之特許實施權，應與其專利權一併轉讓、信託、繼承、授權或設定質權。
+
+> 釋：一、第一項及第二項未修正。二、參酌與貿易有關之智慧財產權協定之規定，後發明申請特許實施前發明時，其表現之技術須較前發明具相當經濟意義之重要技術改良，爰予增訂第四項，並將第三項配合修正。三、增訂第五項。參酌與貿易有關之智慧財產權協定之規定，再發明專利權人或製造方法專利權人取得之特許實施權，其轉讓、信託、繼承、授權或設定質權應與其專利權一併為之，爰予以明定。
 
 * 81 第七十八條之特許實施及第七十九條之撤銷特許實施，各當事人有不服時，得依法提起行政救濟。
 
-* 82 發明專利權人應在專利物品或其包裝上標示專利證書號數，並得要求被授權人或特許實施權人為之，其未附加標示者，不得請求損害賠償。
+* 82 發明專利權人應在專利物品或其包裝上標示專利證書號數，並得要求被授權人或特許實施權人為之，其未附加標示者，不得請求損害賠償。但侵權人明知或有事實足證其可得而知為專利物品者，不在此限。
+
+> 釋：現行規定專利物品或其包裝上未附加標示者，專利權人即不得請求損害賠償，對專利權人之保護有欠周延，爰增訂但書。
 
 * 83 發明專利權人或其被授權人或特許實施權人登載廣告，不得逾越專利權之範圍。非專利物品或非專利方法所製物品，不得在物品或其包裝上附加請准專利字樣，或足以使人誤認為請准專利之標示。
 
@@ -180,7 +196,9 @@
 
 * 87 發明專利權人或其繼承人無資力繳納專利年費者，得向專利專責機關申請減免；其減免辦法由經濟部定之。
 
-* 88 發明專利權受侵害時，專利權人得請求賠償損害，並得請求排除其侵害，有侵害之虞者，得請求防止之。專屬被授權人亦得為前項請求，但以專利權人經通知後而不為前項請求且契約無相反約定者為限。本條所定之請求權，自請求權人知有行為及賠償義務人時起，二年間不行使而消滅；自為行為時起，逾十年者亦同。發明人之姓名表示權受侵害時，得請求表示發明人之姓名或為其他回復名譽之必要處分。
+* 88 發明專利權受侵害時，專利權人得請求賠償損害，並得請求排除其侵害，有侵害之虞者，得請求防止之。專屬被授權人亦得為前項請求。但以專利權人經通知後而不為前項請求且契約無相反約定者為限。發明專利權人或專屬被授權人依前二項規定為請求時，對於侵害專利權之物品或從事侵害行為之原料或器具，得請求銷燬或為其他必要之處置。發明人之姓名表示權受侵害時，得請求表示發明人之姓名或為其他回復名譽之必要處分。本條所定之請求權，自請求權人知有行為及賠償義務人時起，二年間不行使而消滅；自行為時起，逾十年者亦同。
+
+> 釋：一、第一項、第二項及第四項未修正。二、增訂第三項，並將現行第三項移列為第五項。三、為有效遏阻侵害情事，法院有權銷燬或於商業管道外處分仿冒品；對於主要用於製造侵害物品之原料及器具，亦有於商業管道外處分之權，爰增訂第三項。
 
 * 88.1 未經認許之外國法人或團體就本法規定事項得為告訴、自訴或提起民事訴訟。但以條約或其本國法令、慣例，中華民國國民或團體得在該國享受同等權利者為限。其由團體或機構互訂保護專利之協議，經經濟部核准者，亦同。
 
@@ -194,7 +212,9 @@
 
 * 90 用作侵害他人發明專利權行為之物，或由其行為所生之物，得以被侵害人之請求施行假扣押，於判決賠償後，作為賠償金之全部或一部。當事人為前條起訴及聲請本條假扣押時，法院應依民事訴訟法之規定，准予訴訟救助。
 
-* 91 製造方法專利所製成之物品在該製造方法申請專利前為國內外未見者，他人製造相同之物品，推定為以該專利方法所製造。前項推定得提出反證推翻之。如能舉證證明以其他方法亦可製造相同之物品者，視為反證。反證所揭示製造及營業秘密之合法權益，應予充分保障。
+* 91 製造方法專利所製成之物品在該製造方法申請專利前為國內外未見者，他人製造相同之物品，推定為以該專利方法所製造。前項推定得提出反證推翻之。被告證明其製造該相同物品之方法與專利方法不同者，為已提出反證。被告舉證所揭示製造及營業秘密之合法權益，應予充分保障。
+
+> 釋：一、第一項未修正。二、第一項以（一）物品為國內外未見，及（二）物品為相同，兩項推定被告係以專利方法製造，而將舉證責任由製造方法專利權人轉換至被告。此與貿易有關之智慧財產權協定之規定不符，爰予刪除。並增訂被告證明其製造該相同物品之方法與專利方法不同者，為已提出反證。
 
 * 92 發明專利訴訟案件法院應以判決書正本一份送專利專責機關。
 
@@ -222,7 +242,9 @@
 
 * 104 有下列情事之一者，專利專責機關應依職權撤銷其新型專利權，並限期追繳證書，無法追回者，應公告證書作廢：一、違反第一百零五條準用第二十七條或第九十七條至第九十九條規定者。二、新型專利權人為非新型專利申請權人者。三、說明書或圖式，不載明實施必要之事項，或記載不必要之事項，使實施為不可能或困難者。
 
-* 105 第二十二條至第二十五條、第二十七條至第三十條、第三十一條第一款、第三十二條至第四十條、第四十二條至第四十九條、第五十六條第四項、第五十七條、第五十九條至第六十五條、第六十七條至第七十條、第七十二條至第七十七條、第八十條第一項、第三項、第八十二條至第九十條、第九十二條至第九十六條規定，於新型專利準用之。
+* 105 第二十二條至第二十五條、第二十七條至第三十條、第三十一條第一款、第三十二條至第四十條、第四十二條至第四十九條、第五十七條、第五十九條至第六十五條、第六十七條至第七十條、第七十二條至第七十七條、第八十條第一項、第三項、第八十二條至第九十條、第九十二條至第九十六條規定，於新型專利準用之。
+
+> 釋：本條酌作文字修正。因專利法第五十六條第四項有關發明專利進口權部分之規定不符國民待遇及最惠國待遇原則，而將之刪除，新型專利之準用規定自應配合修正，爰於新型專利準用條文中將第五十六條第四項刪除。
 
 * 106 稱新式樣者，謂對物品之形狀、花紋、色彩或其結合之創作。稱聯合新式樣者，謂同一人因襲其另一新式樣之創作且構成近似者。
 
@@ -230,7 +252,9 @@
 
 * 108 下列各款不予新式樣專利：一、純功能性設計之物品造形。二、純藝術創作或美術工藝品。三、積體電路電路佈局及電子電路佈局。四、物品妨害公共秩序、善良風俗或衛生者。五、物品相同或近似於黨旗、國旗、國父遺像、國徽、軍旗、印信、勳章者。
 
-* 109 申請專利之新式樣，經審定公告後暫准發生專利權之效力。經審定公告之新式樣審查確定後，自公告之日起給予新式樣專利權並發證書。新式樣專利權期限自申請日起算十年屆滿。第一項暫准發生專利權之效力，因申請不合程序致申請行為不受理或因異議成立不予專利審查確定，視為自始即不存在。
+* 109 申請專利之新式樣，經審定公告後暫准發生專利權之效力。經審定公告之新式樣審查確定後，自公告之日起給予新式樣專利權並發證書。新式樣專利權期限自申請日起算十二年屆滿；聯合新式樣專利權期限與原專利權期限同時屆滿。第一項暫准發生專利權之效力，因申請不合程序致申請行為不受理或因異議成立不予專利審查確定，視為自始即不存在。
+
+> 釋：一、第一項、第二項及第四項未修正。二、現行第三項規定新式樣專利權期限自申請日起算十年屆滿，扣除審查期間，實際保護期間便不及十年，與貿易有關之智慧財產權協定不符，為求配合，爰將第三項新式樣專利權期限修正為自申請日起算十二年屆滿。三、聯合新式樣專利權期限之計算與申請人權益有關，爰將現行專利法施行細則第四十一條第三項前段修正後納入第三項後段。
 
 * 110 申請新型專利後改請新式樣專利者，以原申請案之申請日為改請案之申請日。但在原申請案審定書送達之次日起三十日後改請者，以改請之日為改請案之申請日。
 
@@ -246,7 +270,9 @@
 
 * 116 專利專責機關於審查時，得依職權或依申請限期通知申請人或異議人為下列各款之行為：一、到局面詢。二、補充或修正圖說。三、補送模型或樣品。依前項第二款所為之補充或修正，係在新式樣專利案審定公告之後提出者，以誤記事項為限。
 
-* 117 新式樣專利權人就其指定新式樣所施予之物品，除本法另有規定者外，專有排除他人未經其同意而製造、販賣、使用或為上述目的而進口該新式樣專利物品之權。新式樣專利權範圍，以圖說所載之申請專利範圍為準。必要時，得審酌創作說明。
+* 117 新式樣專利權人就其指定新式樣所施予之物品，除本法另有規定者外，專有排除他人未經其同意而製造、販賣、使用或為上述目的而進口該新式樣及近似新式樣專利物品之權。新式樣專利權範圍，以圖說所載之申請專利範圍為準；必要時，得審酌創作說明。
+
+> 釋：一、第一項增訂「及近似新式樣」，俾使新式樣專利權之範圍明確。二、第二項未修正。
 
 * 118 新式樣專利權之效力不及於下列各款情事：一、申請前已在國內使用，或已完成必須之準備者。但在申請前六個月內，於專利申請人處得知其新式樣，並經專利申請人聲明保留其專利權者，不在此限。二、申請前已存在國內之物品。三、專利權人所製造或經專利權人同意製造之專利物品販賣後，使用或再販賣該物品者。上述製造、販賣不以國內為限。前項第一款之使用人，限於在其原有事業內繼續利用；第三款得為販賣之區域，由法院依事實認定之。
 
@@ -256,7 +282,9 @@
 
 * 121 有下列情事之一者，專利專責機關應依職權撤銷其新式樣專利權，並限期追繳證書，無法追回者，應公告證書作廢：一、違反第一百二十二條準用第二十七條規定者。二、違反第一百零六條至第一百零八條規定者。三、新式樣專利權人為非新式樣專利申請權人者。
 
-* 122 第二十四條、第二十五條、第二十七條、第三十一條前段、第三十二條、第三十四條至第四十條、第四十二條、第四十三條、第四十五條至第四十七條、第四十九條、第五十六條第四項、第六十條至第六十五條、第六十八條至第七十條、第七十二條至第七十四條、第七十六條、第七十七條、第八十二條至第九十條、第九十二條至第九十六條規定，於新式樣專利準用之。第二十四條第一項所定期間，於新式樣專利案為六個月。
+* 122 第二十四條、第二十五條、第二十七條、第三十一條前段、第三十二條、第三十四條至第四十條、第四十二條、第四十三條、第四十五條至第四十七條、第四十九條、第六十條至第六十五條、第六十八條至第七十條、第七十二條至第七十四條、第七十六條、第七十七條、第八十二條至第九十條、第九十二條至第九十六條規定，於新式樣專利準用之。第二十四條第一項所定期間，於新式樣專利案為六個月。
+
+> 釋：一、第一項酌作文字修正。因專利法第五十六條第四項有關發明專利進口權部分之規定不符國民待遇及最惠國待遇原則，而將之刪除，新式樣專利之準用規定自應配合修正，爰於新式樣專利準用條文中將第五十六條第四項刪除。二、第二項未修正。
 
 * 123 未經物品發明專利權人同意製造該物品，致侵害其專利權者，科新臺幣六十萬元以下罰金。
 
@@ -290,5 +318,7 @@
 
 * 138 經濟部為獎勵發明、創作，應訂定獎助辦法。
 
-* 139 本法自公布日施行。
+* 139 本法自公布日施行。本法修正條文第二十一條、第五十一條、第五十六條、第五十七條、第七十八條至第八十條、第八十二條、第八十八條、第九十一條、第一百零五條、第一百零九條、第一百十七條及第一百二十二條施行日期，由行政院定之。
+
+> 釋：增訂第二項。為配合我國加入世界貿易組織之生效日期，爰明定修正條文施行日期由行政院訂定。
 
