證券交易法 1997.4.15

--- a/行政-財政及金融/證券交易法.md
+++ b/行政-財政及金融/證券交易法.md
@@ -184,9 +184,9 @@
 
 > 釋：一、參照公司法第三十條之立法例，修正本條序文，並將「除依公司法之規定」所指之「該法第三十條各款情事」列為第一款。二、現行第一款、第二款、第三款、第四款之款次遞移為第二款、第三款、第四款、第五款，又第四款僅限於「罰金」，不包括受拘役或有期徒刑之宣告，顯非合理，爰參照第五十四條第一項第五款之規定予以納入外，其餘各款文字未修正。三、配合第五十六條之修正及第六十六條增訂第二款，修正現行之第五款文字，款次並移列為第六款。
 
-* 54 證券商僱用對於有價證券營業行為直接有關之業務人員，應為有行為能力之中華民國國民，且具備有關法令所規定之資格條件，並無左列各款情事之一者：一、受破產之宣告尚未復權者。二、兼任其他證券商之職務者。三、投資於其他證券商者。四、曾犯詐欺、背信罪或違反工商管理法律，受有期徒刑以上刑之宣告，執行完畢，緩刑期滿或赦免後未滿三年者。五、有前條第二款至第四款及第六款之情事者。六、違反主管機關依照本法所發布之命令者。前項業務人員之職稱，由主管機關以命令定之。
+* 54 證券商僱用對於有價證券營業行為直接有關之業務人員，應年滿二十歲，並具備有關法令所規定之資格條件，並無左列各款情事之一者：一、受破產之宣告尚未復權者。二、兼任其他證券商之職務者。三、投資於其他證券商者。四、曾犯詐欺、背信罪或違反工商管理法律，受有期徒刑以上刑之宣告，執行完畢，緩刑期滿或赦免後未滿三年者。五、有前條第二款至第四款及第六款之情事者。六、違反主管機關依照本法所發布之命令者。前項業務人員之職稱，由主管機關以命令定之。
 
-> 釋：一、第一項第五款所引之「前條第一款至第三款及第五款」，因前條已修正，款別調整，爰配合修正為「前條第二款至第四款及第六款」。其餘各款未修正。二、第二項未修正。
+> 釋：一、有關業務人員聘僱，以具備有關法令所規定之資格即可，無須侷限於具有行為能力之中華民國國民為必要，爰修正第一項。二、第二項未修正。
 
 * 55 證券商於辦理公司設立登記後，應依主管機關規定，提存營業保證金。因證券商特許業務所生債務之債權人，對於前項營業保證金，有優先受清償之權。
 
@@ -284,9 +284,9 @@
 
 * 94 證券交易所之組織，分會員制及公司制。
 
-* 95 設立證券交易所之地區及其組織，由主管機關斟酌當地情況，報請財政部核定之。前項同一地區內，以設立一個證券交易所為限。每一證券交易所，以開設一個有價證券集中交易市場為限。
+* 95 證券交易所之設置標準，由主管機關擬訂，報請財政部核定之。每一證券交易所，以開設一個有價證券集中交易市場為限。
 
-> 釋：一、本條第一項酌作文字修正，並配合證券管理委員會之改隸，將「經濟部」修正為「財政部」。二、第二項、第三項未修正。
+> 釋：一、第一項未修正。二、證券交易所是否核准設立，由主管機關及財政部依管理職權決定，當無限制同一地區家數之必要，爰將現行第二項刪除。三、現行第三項移列第二項。
 
 * 96 非依本法不得經營類似有價證券集中交易市場之業務；其以場所或設備供給經營者亦同。
 
@@ -356,7 +356,9 @@
 
 * 127 公司制證券交易所發行之股票，不得於自己或他人開設之有價證券集中交易市場，上市交易。
 
-* 128 公司制證券交易所不得發行不記名股票；其股票之轉讓或出質，以中華民國國籍之人民或其構成員全體，均為中華民國國籍之法人為限。
+* 128 公司制證券交易所不得發行無記名股票。
+
+> 釋：現行條文後段對外國人持有公司制證券交易所股權之限制，違反服務貿易總協定第十六條市場開放之規定，且與證券市場自由化、國際代之政策相悖，爰予刪除。
 
 * 129 在公司制證券交易所交易之證券經紀商或證券自營商，應由交易所與其訂立供給使用有價證券集中交易市場之契約，並檢同有關資料，申報主管機關核備。
 
@@ -510,5 +512,7 @@
 
 > 釋：一、本條新增。二、為補充本法之不足及避免掛漏，有訂定施行細則之必要。
 
-* 183 本法自公布日施行。
+* 183 本法自公布日施行。本法修正條文第五十四條、第九十五條及第一百二十八條施行日期，由行政院定之。
+
+> 釋：一、第一項未修正。二、為配合我國加入世界貿易組織之生效日期，本次修正條文之施行日期由行政院定之，爰增訂第二項。
 
