公職人員選舉罷免法 1997.5.31

--- a/行政-內政/公職人員選舉罷免法.md
+++ b/行政-內政/公職人員選舉罷免法.md
@@ -182,9 +182,9 @@
 
 > 釋：規定自選舉公告之日起，至投票日後三十日內，候選人競選經費方得申報列舉扣除，第一項爰增訂競選經費支付之起迄期間，俾資候選人有所遵循，並避免徵納雙方爭議，爰修正第一項。
 
-* 45.5 候選人除全國不分區、僑居國外國民選舉外，當選人在一人，得票達各該選舉區當選票數三分之一以上者；當選人在二人以上，得票達各該選舉區當選票數二分之一以上者，應補貼其競選費用，每票補貼新臺幣三十元。但其最高額，不得超過各該選舉區候選人競選經費最高限額。政黨之全國不分區、僑居國外國民選舉得票率達百分之五以上者，應補貼該政黨競選費用；每票補貼新臺幣五元。第一項當選票數，當選人在二人以上者，以最低當選票數為準，其最低當選票數之當選人，如以婦女保障名額當選，應以前一名當選人之得票數為最低當選票數。第一項、第二項所須補貼費用，依第十三條規定編列預算。
+* 45.5 候選人除全國不分區、僑居國外國民選舉外，當選人在一人，得票數達各該選舉區當選票數三分之一以上者，當選人在二人以上，得票數達各該選舉區當選票數二分之一以上者，應補貼其競選費用，每票補貼新臺幣三十元。但其最高額，不得超過各該選舉區候選人競選經費最高限制。第一項當選票數，當選者在二人以上者，以最低當選票數為準；其最低當選票數之當選人，如以婦女保障名額當選，應以前一名當選人之得票數為最低當選票數。國家應每年對政黨撥給競選費用補助金，其撥款標準以最近一次立法委員選舉為依據。政黨之立法委員全國不分區、僑居國外國民選舉得票率達百分之五以上者，應補貼該政黨競選費用，每年每票補貼新臺幣五十元，至該屆立法委員任期屆滿為止。第一項、第三項所需補貼費用，依第十三條規定編列預算。
 
-> 釋：配合憲法增修條文第十五條規定，刪除第一項監察委員選舉之規定。
+> 釋：現行「公職人員選舉罷免法」第四十五條之五，其中雖對競選經費之補助已有所規定，但隨著民主選舉之基礎的不斷擴大，政黨所需之政治資金也日益龐大。一般來說，政黨倚賴私人或公司團體的政治捐獻，若沒有完整之法律制度加以明確規範，所謂金權政治之現象就很容易滋生。因此公費補助政黨制度對民主政黨政治的確立，其意義是極為正面的，爰加以修正之。
 
 * 46 候選人於競選活動期間，得在其選舉區設立競選辦事處及置助選員。候選人競選辦事處及助選員設置辦法，由中央選舉委員會定之。
 
