中華民國刑法 1997.9.25

--- a/司法-刑事/中華民國刑法.md
+++ b/司法-刑事/中華民國刑法.md
@@ -448,7 +448,9 @@
 
 * 219 偽造之印章、印文或署押，不問屬於犯人與否，沒收之。
 
-* 220 在紙上或物品上之文字、符號，依習慣或特約，足以為表示其用意之證明者，關於本章之罪，以文書論。
+* 220 在紙上或物品上之文字、符號、圖畫、照像，依習慣或特約，足以為表示其用意之證明者，關於本章及本章以外各罪，以文書論。錄音、錄影或電磁紀錄，藉機器或電腦之處理所顯示之聲音、影像或符號，足以為表示其用意之證明者，亦同。
+
+> 釋：一、紙上或物品上之圖畫或照像，雖非文書，亦復不少，其與公共信用關係密切，爰增訂「圖畫」、「照像」以文書論之規定，以處罰其偽造、變造之行為。二、近代社會對於錄音、錄影、電腦之使用，日趨普遍，並漸用以取代文書之製作，如有偽造、變造行為，有加以處罰之必要，特增列第二項，將「錄音」、「錄影」、「電磁紀錄」亦視為文書之規定，已應實際需要，另參酌日本刑法第七條之二之立法例，增列第三項有關「電磁紀錄」之界定。三、又本條所指文字、符號、圖畫、照像、錄音、錄影或電磁紀錄之使用，在社會上已日趨普遍，其重要性不亞於一般文書。爰參酌本法第一百三十四條之立法例，將本法原規定「關於本章之罪」，修正為「關於本章及本章以外各罪」，以期擴及本法有關文書之規定，以應需要。
 
 * 221 對於婦女以強暴、脅迫、藥劑、催眠術或他法，至使不能抗拒而姦淫之者，為強姦罪，處五年以上有期徒刑。姦淫未滿十四歲之女子，以強姦論。前二項之未遂犯罰之。
 
@@ -638,13 +640,23 @@
 
 * 314 本章之罪，須告訴乃論。
 
-* 315 無故開拆或隱匿他人之封緘信函或其他封緘文書者，處拘役或三百元以下罰金。
+* 315 無故開拆或隱匿他人之封緘信函、文書或圖畫者，處拘役或三千元以下罰金。無故以開拆以外之方法，窺視其內容者，亦同。
+
+> 釋：一、增列圖畫為保護客體，並簡化原規定之文字及修正罰金額。二、增設「無故以開拆以外之方法窺視其內容」之處罰規定，並緊接於原條文之下，列為原條文後段，以應實際需要，並得規範以電子科學儀器窺視文書情形。
 
 * 316 醫師、藥師、藥商、助產士、宗教師、律師、辯護人、公證人、會計師或其業務上佐理人或曾任此等職務之人，無故洩漏因業務知悉或持有之他人秘密者，處一年以下有期徒刑、拘役或五百元以下罰金。
 
 * 317 依法令或契約有守因業務知悉或持有工商秘密之義務而無故洩漏之者，處一年以下有期徒刑、拘役或一千元以下罰金。
 
 * 318 公務員或曾任公務員之人，無故洩漏因職務知悉或持有他人之工商秘密者，處二年以下有期徒刑、拘役或二千元以下罰金。
+
+* 318.1 無故洩漏因利用電腦或其他相關設備知悉或持有他人之秘密者，處二年以下有期徒刑、拘役或五千元以下罰金。
+
+> 釋：按現行妨害秘密罪之處罰對象限於醫師、藥師、律師、會計師等從事自由業之人，依法令或契約有守因業務知悉或持有工商秘密義務之人及公務員、曾任公務員而其有守秘密義務之人，似不足以規範其他無正當理由洩漏因利用電腦或其他相關設備知悉或持有他人秘密之行為，故增列本條規定。
+
+* 318.2 利用電腦或其相關設備犯第三百十六條至第三百十八條之罪者，加重其刑至二分之一。
+
+> 釋：就職務上或業務上有守秘密義務之人，如利用電腦或其相關設備為洩漏行為，由於洩露範圍因電腦的大量儲存功能，所造成之損害亦較傳統犯罪為大，有加重其處罰之必要，故增列本條規定。
 
 * 319 本章之罪，須告訴乃論。
 
@@ -654,7 +666,9 @@
 
 * 322 以犯竊盜罪為常業者，處一年以上、七年以下有期徒刑。
 
-* 323 電氣，關於本章之罪，以動產論。
+* 323 電能、熱能及其他能量或電磁紀錄，關於本章之罪，以動產論。
+
+> 釋：一、關於「電氣」二字，現行立法例，例如電業法第二條、第四條、第九條第三款等，均用「電能」而不用「電氣」，爰配合修正之。二、增列「熱能及其他能量或電磁紀錄」關於本章之罪，以動產論之規定，以應需要。
 
 * 324 於直系血親、配偶或同財共居親屬之間，犯本章之罪者，得免除其刑。前項親屬或其他五親等內血親或三親等內姻親之間，犯本章之罪者，須告訴乃論。
 
@@ -688,6 +702,18 @@
 
 * 339 意圖為自己或第三人不法之所有，以詐術使人將本人或第三人之物交付者，處五年以下有期徒刑、拘役或科或併科一千元以下罰金。以前項方法得財產上不法之利益或使第三人得之者亦同。前二項之未遂犯罰之。
 
+* 339.1 意圖為自己或第三人不法之所有，以不正方法由收費設備取得他人之物者，處一年以下有期徒刑、拘役或三千元以下罰金。以前項方法得財產上不法之利益或使第三人得之者，亦同。
+
+> 釋：按目前社會自動付款或收費設備之應用，日益普遍，如以不正方法由此種設備取得他人之物或得財產上不法利益，不特有損業者權益，而且破壞社會秩序，有加處罰之必要。惟其犯罪情節，尚屬輕微，特增訂處罰專條，並就取得財物及得財產上不法利益之情形，分為二項規定，以應社會需要。
+
+* 339.2 意圖為自己或第三人不法之所有，以不正方法由自動付款設備取得他人之物者，處三年以下有期徒刑、拘役或一萬元以下罰金。以前項方法得財產上不法之利益或使第三人得之者，亦同。
+
+> 釋：利用電腦或其相關設備犯詐欺罪，為常見之電腦犯罪型態，為適應社會發展需要，爰參酌日本現行刑法第二百四十六條之二立法例增列處罰專條規定。
+
+* 339.3 意圖為自己或第三人不法之所有，以不正方法將虛偽資料或不正指令輸入電腦或其相關設備，製作財產權之得喪、變更紀錄，而取得他人財產者，處七年以下有期徒刑。以前項方法得財產上不法之利益或使第三人得之者，亦同。
+
+> 釋：以不正方法將虛偽資料或不正指令輸入電腦或其相關設備，為電腦犯罪型態，為適應社會發展需要，爰增列處罰專條。
+
 * 340 以犯前條之罪為常業者，處一年以上、七年以下有期徒刑，得併科五千元以下罰金。
 
 * 341 意圖為自己或第三人不法之所有，乘未滿二十歲人之知慮淺薄或乘人之精神耗弱，使之將本人或第三人之物交付者，處五年以下有期徒刑、拘役或科或併科一千元以下罰金。以前項方法得財產上不法之利益或使第三人得之者亦同。前二項之未遂犯罰之。
@@ -712,7 +738,9 @@
 
 * 351 於直系血親、配偶或同財共居親屬之間，犯本章之罪者，得免除其刑。
 
-* 352 毀棄、損壞他人文書或致令不堪用，足以生損害於公眾或他人者，處三年以下有期徒刑、拘役或五百元以下罰金。
+* 352 毀棄、損壞他人文書或致令不堪用，足以生損害於公眾或他人者，處三年以下有期徒刑、拘役或一萬元以下罰金。干擾他人電磁紀錄之處理，足以生損害於公眾或他人者，亦同。
+
+> 釋：一、原條文修正為第一項，並修正罰金額。二、干擾他人電磁紀錄之處理，足以影響電腦正常之運作，足以生損害於公眾或他人時，宜以刑罰加以規範，爰增列第二項規定以應需要。
 
 * 353 毀壞他人建築物、礦坑、船艦或致令不堪用者，處六月以上、五年以下有期徒刑。因而致人於死者，處無期徒刑或七年以上有期徒刑；致重傷者，處三年以上、十年以下有期徒刑。第一項之未遂犯罰之。
 
